Refactor: Rename getSeasonWeek to getChapterWeek and update related files
This commit completes the migration from "season" to "chapter" terminology by:

- Renaming `getSeasonWeek.ts` to `getChapterWeek.ts`
- Removing the old `getSeasonWeek.test.ts` file
- Updating import paths in multiple components and utility files
- Ensuring consistent chapter-related naming across the codebase

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -130,17 +130,17 @@
   "beehive.hives.plural": "hives",
   "birdieplaza.birdieIntro": "Hey there, I'm Birdie, the most beautiful Bumpkin around!",
   "birdieplaza.admiringOutfit": "I noticed you admiring my outfit. Isn't it fantastic?!?",
-  "birdieplaza.currentSeason": "We are currently in {{currentSeason}} Season and Bumpkins are going crazy for {{seasonalTicket}}s.",
-  "birdieplaza.collectTickets": "Collect enough {{seasonalTicket}}s and you can craft rare NFTs. That's how I got this rare outfit!",
+  "birdieplaza.currentSeason": "We are currently in {{currentSeason}} Season and Bumpkins are going crazy for {{chapterTicket}}s.",
+  "birdieplaza.collectTickets": "Collect enough {{chapterTicket}}s and you can craft rare NFTs. That's how I got this rare outfit!",
   "birdieplaza.whatIsSeason": "What is a season?",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}}s?",
-  "birdieplaza.earnTicketsVariety": "You can earn {{seasonalTicket}} in a variety of ways.",
-  "birdieplaza.commonMethod": "The most common method to earn {{seasonalTicket}}s is by gathering resources or collecting other requested items, and then delivering them to Bumpkins in the Plaza and some other areas.",
-  "birdieplaza.choresAndRewards": "You can also earn {{seasonalTicket}}s by weekly chores, daily chest rewards, Bert's Odd Obsession and bounty system!",
-  "birdieplaza.gatherAndCraft": "Gather enough {{seasonalTicket}}s and you will be able to buy some rare items like I did.",
-  "birdieplaza.newSeasonIntro": "Every 3 months a new season is introduced at Sunflower Land.",
-  "birdieplaza.seasonQuests": "This season has exciting quests, rare collectibles and exclusive wearables you can earn.",
-  "birdieplaza.craftItems": "To obtain these rare items, you must collect {{seasonalTicket}}s and exchange them at Stella's Megastore or bid at the Auction House.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}}s?",
+  "birdieplaza.earnTicketsVariety": "You can earn {{chapterTicket}} in a variety of ways.",
+  "birdieplaza.commonMethod": "The most common method to earn {{chapterTicket}}s is by gathering resources or collecting other requested items, and then delivering them to Bumpkins in the Plaza and some other areas.",
+  "birdieplaza.choresAndRewards": "You can also earn {{chapterTicket}}s by weekly chores, daily chest rewards, Bert's Odd Obsession and bounty system!",
+  "birdieplaza.gatherAndCraft": "Gather enough {{chapterTicket}}s and you will be able to buy some rare items like I did.",
+  "birdieplaza.newChapterIntro": "Every 3 months a new season is introduced at Sunflower Land.",
+  "birdieplaza.chapterQuests": "This season has exciting quests, rare collectibles and exclusive wearables you can earn.",
+  "birdieplaza.craftItems": "To obtain these rare items, you must collect {{chapterTicket}}s and exchange them at Stella's Megastore or bid at the Auction House.",
   "description.speed.chicken.one": "Your chickens will now produce eggs 10% faster.",
   "description.speed.chicken.two": "Produces eggs 10% faster.",
   "description.fat.chicken.one": "Your chickens will now require 10% less food each time they are fed.",
@@ -654,7 +654,7 @@
   "confirmation.sell": "Are you sure you want to sell {{amount}} {{name}} for {{coinAmount}} Coins?",
   "confirmation.buyCrops": "Are you sure you want to spend {{coinAmount}} Coins to buy {{seedNo}} {{seedName}}s?",
   "confirmation.enterAmount": "Enter Amount to Sell:",
-  "confirmation.sellSeasonalArtefact": "This bounty is a seasonal artefact! Are you sure you want to sell it?",
+  "confirmation.sellChapterArtefact": "This bounty is a seasonal artefact! Are you sure you want to sell it?",
   "confirmation.valuableTreasure": "This bounty is very valuable! Are you sure you want to sell it?",
   "confirm.skillClaim": "Are you sure you want to claim the skill?",
   "faction-intro.one": "Welcome to your new faction house... We need your help to become more powerful and dominate the kingdom.",
@@ -2875,7 +2875,7 @@
   "npcDialogues.bert.intro2": "Ah, kindred spirit! Sunflorea is home to countless treasures...",
   "npcDialogues.bert.intro3": "Greetings, bearer of the mysterious! In Sunflorea, some items demand Delivery...",
   "npcDialogues.bert.intro4": "Hello, seeker of the concealed! Sunflorea's enchantments can be categorized into two...",
-  "bert.day": "You cannot withdraw this item for 3 days after claiming {{seasonalTicket}}s.",
+  "bert.day": "You cannot withdraw this item for 3 days after claiming {{chapterTicket}}s.",
   "npcDialogues.bert.positiveDelivery1": "Incredible! You've brought me everything I need...",
   "npcDialogues.bert.positiveDelivery2": "Oh, fascinating find! You have brought me the exact items I sought...",
   "npcDialogues.bert.positiveDelivery3": "Ah, about time! You've acquired the exact items I sought. Excellent!",
@@ -3097,12 +3097,12 @@
   "plaza.magicButton.query": "A magical button has appeared in the plaza. Do you want to press it?",
   "nyonStatue.memory": "In memory of",
   "nyonStatue.description": "The legendary knight responsible for clearing the goblins from the mines. Shortly after his victory he died by poisoning from a Goblin conspirator. The Sunflower Citizens erected this statue with his armor to commemorate his conquests.",
-  "obsessionDialogue.line1": "Ah, the {{itemName}}! I only wish to see it, not possess. Show it to me, and {{seasonalTicket}}s will be your reward.",
-  "obsessionDialogue.line2": "You've brought the {{itemName}}? I merely want to gaze upon it. Let me see, and {{seasonalTicket}}s shall be yours.",
-  "obsessionDialogue.line3": "Is that the {{itemName}} you have? A mere glance is all I desire. For this, you'll receive {{seasonalTicket}}s.",
-  "obsessionDialogue.line4": "The {{itemName}}! I don't want to keep it, just to behold it. Show it to me, and {{seasonalTicket}}s are yours.",
-  "obsessionDialogue.line5": "You offer a view of the {{itemName}}? All I ask is to see it briefly. For your generosity, {{seasonalTicket}}s will be granted to you.",
-  "obsessionDialogue.codex": "Is that the {{itemName}} you have? Travel to the plaza to find Bert and show it to him, and he will give you {{seasonalTicket}}s in return.",
+  "obsessionDialogue.line1": "Ah, the {{itemName}}! I only wish to see it, not possess. Show it to me, and {{chapterTicket}}s will be your reward.",
+  "obsessionDialogue.line2": "You've brought the {{itemName}}? I merely want to gaze upon it. Let me see, and {{chapterTicket}}s shall be yours.",
+  "obsessionDialogue.line3": "Is that the {{itemName}} you have? A mere glance is all I desire. For this, you'll receive {{chapterTicket}}s.",
+  "obsessionDialogue.line4": "The {{itemName}}! I don't want to keep it, just to behold it. Show it to me, and {{chapterTicket}}s are yours.",
+  "obsessionDialogue.line5": "You offer a view of the {{itemName}}? All I ask is to see it briefly. For your generosity, {{chapterTicket}}s will be granted to you.",
+  "obsessionDialogue.codex": "Is that the {{itemName}} you have? Travel to the plaza to find Bert and show it to him, and he will give you {{chapterTicket}}s in return.",
   "offer.okxOffer": "Howdy Farmer, I have an exclusive OKX offer for you!",
   "offer.beginWithNFT": "To begin you will need to mint a free Farm NFT. This will include:",
   "offer.getStarterPack": "Get Starter Pack Now",
@@ -3829,8 +3829,8 @@
   "description.gold.beetle.boost": "+0.1 Gold",
   "description.stone.beetle.boost": "+0.1 Stone",
   "description.iron.beetle.boost": "+0.1 Iron",
-  "available.all.season": "Available all season",
-  "megastore.message.allSeason": "Here are items that are available for purchase throughout the whole season. Be sure to grab it before the end of the season!",
+  "available.all.chapter": "Available all season",
+  "megastore.message.allChapter": "Here are items that are available for purchase throughout the whole season. Be sure to grab it before the end of the season!",
   "monthly": "Monthly",
   "seasonal": "Seasonal",
   "permanent": "Permanent",
