--- a/src/lib/i18n/dictionaries/fr.json
+++ b/src/lib/i18n/dictionaries/fr.json
@@ -104,13 +104,13 @@
   "beehive.pollinationCelebration": "Célébration de la pollinisation ! Vos cultures sont gâtées avec un bonus de 0,2 grâce à un essaim d'abeilles amical!",
   "birdieplaza.birdieIntro": "Salut, je suis Birdie, le Bumpkin le plus beau des environs !",
   "birdieplaza.admiringOutfit": "J'ai remarqué que tu admirais ma tenue. N'est-elle pas fantastique ?!?",
-  "birdieplaza.currentSeason": "Nous sommes actuellement dans la saison {{currentSeason}} et les Bumpkins sont fous de {{seasonalTicket}}.",
-  "birdieplaza.collectTickets": "Collecte suffisamment de {{seasonalTicket}} et tu pourras fabriquer des NFT rares. C'est ainsi que j'ai obtenu cette tenue rare !",
+  "birdieplaza.currentSeason": "Nous sommes actuellement dans la saison {{currentSeason}} et les Bumpkins sont fous de {{chapterTicket}}.",
+  "birdieplaza.collectTickets": "Collecte suffisamment de {{chapterTicket}} et tu pourras fabriquer des NFT rares. C'est ainsi que j'ai obtenu cette tenue rare !",
   "birdieplaza.whatIsSeason": "Qu'est-ce qu'une saison ?",
-  "birdieplaza.howToEarnTickets": "Comment puis-je gagner des {{seasonalTicket}} ?",
-  "birdieplaza.earnTicketsVariety": "Tu peux gagner des {{seasonalTicket}} de plusieurs manières.",
-  "birdieplaza.gatherAndCraft": "Rassemble assez de {{seasonalTicket}} et tu pourras acheter des objets rares comme je l'ai fait.",
-  "birdieplaza.newSeasonIntro": "Tous les 3 mois, une nouvelle saison est introduite à Sunflower Land.",
+  "birdieplaza.howToEarnTickets": "Comment puis-je gagner des {{chapterTicket}} ?",
+  "birdieplaza.earnTicketsVariety": "Tu peux gagner des {{chapterTicket}} de plusieurs manières.",
+  "birdieplaza.gatherAndCraft": "Rassemble assez de {{chapterTicket}} et tu pourras acheter des objets rares comme je l'ai fait.",
+  "birdieplaza.newChapterIntro": "Tous les 3 mois, une nouvelle saison est introduite à Sunflower Land.",
   "description.speed.chicken.one": "Vos poules produiront désormais des œufs 10% plus rapidement.",
   "description.banana.chicken": "Une poule qui booste les bananes. Quel monde nous vivons.",
   "description.lab.grow.pumpkin": "+0,3 de rendement en pumpkins",
@@ -1767,7 +1767,7 @@
   "npcDialogues.bert.intro2": "Ah, esprit apparenté ! Sunflorea abrite d'innombrables trésors...",
   "npcDialogues.bert.intro3": "Salutations, porteur du mystérieux ! À Sunflorea, certains objets demandent Livraison...",
   "npcDialogues.bert.intro4": "Bonjour, chercheur du caché ! Les enchantements de Sunflorea peuvent être catégorisés en deux...",
-  "bert.day": "Vous ne pouvez pas retirer cet objet pendant 3 jours après avoir réclamé {{seasonalTicket}}.",
+  "bert.day": "Vous ne pouvez pas retirer cet objet pendant 3 jours après avoir réclamé {{chapterTicket}}.",
   "npcDialogues.bert.positiveDelivery1": "Incroyable ! Vous m'avez apporté tout ce dont j'ai besoin...",
   "npcDialogues.bert.positiveDelivery2": "Oh, découverte fascinante ! Vous m'avez apporté exactement les objets que je cherchais...",
   "npcDialogues.bert.positiveDelivery3": "Ah, il était temps ! Vous avez acquis les objets exacts que je cherchais. Excellent!",
@@ -1894,10 +1894,10 @@
   "plaza.magicButton.query": "Un bouton magique est apparu sur la place. Souhaitez-vous appuyer dessus?",
   "nyonStatue.memory": "En mémoire de",
   "nyonStatue.description": "Le chevalier légendaire responsable d'avoir débarrassé les gobelins des mines. Peu de temps après sa victoire, il est décédé empoisonné par un conspirateur gobelin. Les Citoyens du Tournesol ont érigé cette statue avec son armure pour commémorer ses conquêtes.",
-  "obsessionDialogue.line1": "Ah, le {{itemName}} ! Je souhaite seulement le voir, pas le posséder. Montrez-le moi, et vous recevrez {{seasonalTicket}} en récompense.",
-  "obsessionDialogue.line2": "Vous avez apporté le {{itemName}} ? Je veux simplement le contempler. Laissez-moi le voir, et les {{seasonalTicket}} seront vôtres.",
-  "obsessionDialogue.line4": "{{itemName}} ! Je ne veux pas le garder, juste le contempler. Montrez-le moi, et les {{seasonalTicket}} seront à vous.",
-  "obsessionDialogue.line5": "Vous offrez une vue du {{itemName}} ? Tout ce que je demande, c'est de le voir brièvement. Pour votre générosité, des {{seasonalTicket}} vous seront accordés.",
+  "obsessionDialogue.line1": "Ah, le {{itemName}} ! Je souhaite seulement le voir, pas le posséder. Montrez-le moi, et vous recevrez {{chapterTicket}} en récompense.",
+  "obsessionDialogue.line2": "Vous avez apporté le {{itemName}} ? Je veux simplement le contempler. Laissez-moi le voir, et les {{chapterTicket}} seront vôtres.",
+  "obsessionDialogue.line4": "{{itemName}} ! Je ne veux pas le garder, juste le contempler. Montrez-le moi, et les {{chapterTicket}} seront à vous.",
+  "obsessionDialogue.line5": "Vous offrez une vue du {{itemName}} ? Tout ce que je demande, c'est de le voir brièvement. Pour votre générosité, des {{chapterTicket}} vous seront accordés.",
   "offer.okxOffer": "Salut fermier, j'ai une offre exclusive OKX pour toi!",
   "offer.beginWithNFT": "Pour commencer, vous devrez créer un NFT de ferme gratuit. Cela comprendra :",
   "offer.getStarterPack": "Obtiens le Pack de Démarrage Maintenant",
@@ -2504,7 +2504,7 @@
   "compost.rapidRoot": "Rapid Root réduit de 50 % le temps de croissance des cultures à partir des parcelles",
   "confirmation.buyCrops": "Êtes-vous sûr de vouloir dépenser {{coinAmount}} pièces pour acheter des {{seedNo}} {{seedName}} s ?",
   "confirmation.enterAmount": "Entrez le montant à vendre :",
-  "confirmation.sellSeasonalArtefact": "Cette prime est un objet saisonnier ! Es-tu sûr de vouloir le vendre ?",
+  "confirmation.sellChapterArtefact": "Cette prime est un objet saisonnier ! Es-tu sûr de vouloir le vendre ?",
   "confirmation.valuableTreasure": "Cette prime est très précieuse ! Es-tu sûr de vouloir le vendre ?",
   "faction-intro.one": "Bienvenue dans votre nouvelle maison de faction... Nous avons besoin de ton aide pour devenir plus puissants et dominer le château.",
   "faction-intro.three": "À la fin de chaque semaine, des prix bonus seront décernés à nos meilleurs membres. Bonne chance !",
@@ -3395,8 +3395,8 @@
   "description.faction.mark": "Utilisez-les dans la boutique des factions",
   "description.vase": "Un objet fragile datant de l'antiquité",
   "islandupgrade.warning": "Assurez-vous de ne pas avoir de cultures, de fruits, de bâtiments, de poulets, de pierres pourpres, de fleurs ou de miel en cours. Ils ne pourront pas être récoltés et seront retournés dans votre inventaire. Les pierres solaires, la maison, le marché, le foyer et l'établi resteront placés sur votre terrain.",
-  "available.all.season": "Disponible toute la saison",
-  "megastore.message.allSeason": "Voici les articles disponibles à l'achat tout au long de la saison. N'oubliez pas de vous le procurer avant la fin de la saison !",
+  "available.all.chapter": "Disponible toute la saison",
+  "megastore.message.allChapter": "Voici les articles disponibles à l'achat tout au long de la saison. N'oubliez pas de vous le procurer avant la fin de la saison !",
   "monthly": "Mensuel",
   "seasonal": "Saisonnier",
   "mega.collectibles": "Objets de collection Mega",
@@ -3528,9 +3528,9 @@
   "gems.update": "Mise à jour des pierres",
   "gems.intro": "Pour préparer l'intégration de nouveaux joueurs, nous avons remplacé les Block Bucks par une nouvelle devise : les gemmes !",
   "gems.intro.two": "Vous recevrez 20 gemmes pour chaque Block Buck que vous possédez.",
-  "birdieplaza.commonMethod": "La méthode la plus courante pour gagner des {{seasonalTicket}} s consiste à rassembler des ressources ou à collecter d'autres objets demandés, puis à les livrer à Bumpkins in the Plaza et dans d'autres zones.",
-  "birdieplaza.seasonQuests": "Cette saison propose des quêtes passionnantes, des objets de collection rares et des objets portables exclusifs que vous pouvez gagner.",
-  "birdieplaza.craftItems": "Pour obtenir ces objets rares, vous devez collecter des {{seasonalTicket}} s et les échanger au Stella's Megastore ou enchérir à l'hôtel des ventes.",
+  "birdieplaza.commonMethod": "La méthode la plus courante pour gagner des {{chapterTicket}} s consiste à rassembler des ressources ou à collecter d'autres objets demandés, puis à les livrer à Bumpkins in the Plaza et dans d'autres zones.",
+  "birdieplaza.chapterQuests": "Cette saison propose des quêtes passionnantes, des objets de collection rares et des objets portables exclusifs que vous pouvez gagner.",
+  "birdieplaza.craftItems": "Pour obtenir ces objets rares, vous devez collecter des {{chapterTicket}} s et les échanger au Stella's Megastore ou enchérir à l'hôtel des ventes.",
   "reward.streak.oneYear": "Récompense d'une série de 365 jours",
   "chapter.codex.nextDrop.available": "{{dropSupply}} disponible",
   "description.hoot.boost": "+0,5 blé, radis, chou frisé, riz, orge",
@@ -3583,7 +3583,7 @@
   "description.chicken": "Source fiable d'œufs frais et de plumes douces, cette poule fait sa part avec plaisir avec les soins appropriés.",
   "description.cow": "Cette vache douce fournit du lait frais et du cuir résistant. Faites-le heureux avec beaucoup de nourriture et d'affection.",
   "description.sheep": "Ce mouton moelleux fournit à la fois de la laine ordinaire et de la laine mérinos luxueuse. Faites-en plaisir pour des résultats des plus doux !",
-  "obsessionDialogue.line3": "Est-ce le {{itemName}} que vous avez ? Un simple coup d'œil est tout ce que je souhaite. Pour cela, vous recevrez {{seasonalTicket}} s.",
+  "obsessionDialogue.line3": "Est-ce le {{itemName}} que vous avez ? Un simple coup d'œil est tout ce que je souhaite. Pour cela, vous recevrez {{chapterTicket}} s.",
   "competition.maybeLater": "Peut-être plus tard",
   "world.lvl.requirement": "Niveau {{lvl}}",
   "world.factionMembersOnly": "Membres de la faction uniquement",
@@ -4051,7 +4051,7 @@
   "description.brush": "Brosse pour animaux Utilisez-le pour montrer de l'affection à vos animaux.",
   "description.music.box": "Joue de la musique aux animaux. Utilisez-le pour montrer de l'affection à vos animaux.",
   "levelUpMax": "Niveau maximum !",
-  "birdieplaza.choresAndRewards": "Vous pouvez également gagner {{seasonalTicket}} s grâce à des tâches hebdomadaires, à des récompenses de coffre quotidiennes, à l'obsession étrange de Bert et au système de primes !",
+  "birdieplaza.choresAndRewards": "Vous pouvez également gagner {{chapterTicket}} s grâce à des tâches hebdomadaires, à des récompenses de coffre quotidiennes, à l'obsession étrange de Bert et au système de primes !",
   "description.community.coin": "(WIP) Une pièce de valeur réservée pour une utilisation future à Sunflower Land.",
   "bedsMigration.bedsNeededDescription2": "Chaque lit unique peut accueillir un ouvrier de ferme.",
   "bedsMigration.bedsNeededDescription3": "Placez des lits pour engager plus d'ouvriers agricoles !",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "Article vendu",
   "marketplace.congratulationsItemSold": "Félicitations, votre article est vendu !",
   "withdraw.taxFree": "Les gobelins vous taxent sur la SFL gagnée en jeu. Cela exclut les dépôts et le marché.",
-  "bounties.board.ticketAmount": "Le montant de {{seasonalTicket}} s variera chaque semaine en fonction des demandes.",
+  "bounties.board.ticketAmount": "Le montant de {{chapterTicket}} s variera chaque semaine en fonction des demandes.",
   "marketplace.listing.cancelling": "Annulation de l'annonce",
   "marketplace.listing.cancelling.success": "Félicitations, vous avez annulé votre annonce avec succès !",
   "marketplace.listing.cancelling.failure": "Oups, quelque chose s'est mal passé. Veuillez réessayer.",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} achats quotidiens restants",
   "remaining.free.purchase": "Il reste 1 achat quotidien",
   "statements.potionRule.four": "Une fois le jeu terminé, le score de votre dernière tentative déterminera votre récompense.",
-  "obsessionDialogue.codex": "Est-ce le {{itemName}} que vous avez ? Rendez-vous sur la place pour trouver Bert et le lui montrer, et il vous donnera {{seasonalTicket}} s en retour.",
+  "obsessionDialogue.codex": "Est-ce le {{itemName}} que vous avez ? Rendez-vous sur la place pour trouver Bert et le lui montrer, et il vous donnera {{chapterTicket}} s en retour.",
   "bounties.board.travel": "Rendez-vous sur la place et trouvez Poppy pour remplir ces primes",
   "description.trade.points": "Gagné en échangeant des objets de collection et des appareils portables sur le marché. Peut être échangé contre des récompenses en jeu.",
   "reward.collectible": "Un objet de collection pour votre ferme",
