--- a/src/lib/i18n/dictionaries/id.json
+++ b/src/lib/i18n/dictionaries/id.json
@@ -123,13 +123,13 @@
   "beehive.hives.plural": "gatal-gatal",
   "birdieplaza.birdieIntro": "Hei, aku Birdie, Bumpkin yang paling cantik di sekitar!",
   "birdieplaza.admiringOutfit": "Aku melihat kau mengagumi pakaianku. Bukankah itu fantastis?!?",
-  "birdieplaza.currentSeason": "Kami saat ini berada di Musim {{currentSeason}} dan Bumpkins tergila-gilaan dengan {{seasonalTicket}} s.",
-  "birdieplaza.collectTickets": "Kumpulkan cukup {{seasonalTicket}} s dan Anda dapat membuat NFT langka. Begitulah cara saya mendapatkan pakaian langka ini!",
+  "birdieplaza.currentSeason": "Kami saat ini berada di Musim {{currentSeason}} dan Bumpkins tergila-gilaan dengan {{chapterTicket}} s.",
+  "birdieplaza.collectTickets": "Kumpulkan cukup {{chapterTicket}} s dan Anda dapat membuat NFT langka. Begitulah cara saya mendapatkan pakaian langka ini!",
   "birdieplaza.whatIsSeason": "Apa itu musim?",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "Anda bisa mendapatkan {{seasonalTicket}} dengan berbagai cara.",
-  "birdieplaza.gatherAndCraft": "Kumpulkan cukup {{seasonalTicket}} s dan Anda akan dapat membeli beberapa barang langka seperti yang saya lakukan.",
-  "birdieplaza.newSeasonIntro": "Setiap 3 bulan musim baru diperkenalkan di Sunflower Land.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "Anda bisa mendapatkan {{chapterTicket}} dengan berbagai cara.",
+  "birdieplaza.gatherAndCraft": "Kumpulkan cukup {{chapterTicket}} s dan Anda akan dapat membeli beberapa barang langka seperti yang saya lakukan.",
+  "birdieplaza.newChapterIntro": "Setiap 3 bulan musim baru diperkenalkan di Sunflower Land.",
   "description.speed.chicken.one": "Ayam Anda sekarang akan menghasilkan telur 10% lebih cepat.",
   "description.banana.chicken": "Ayam yang meningkatkan pisang. Betapa dunia yang kita tinggali.",
   "description.pharaoh.chicken": "Ayam yang berkuasa, +1 Dig.",
@@ -558,7 +558,7 @@
   "confirmation.sell": "Apakah Anda yakin ingin menjual {{amount}} {{name}} untuk {{coinAmount}} Koin?",
   "confirmation.buyCrops": "Apakah Anda yakin ingin menghabiskan {{coinAmount}} Koin untuk membeli {{seedNo}} {{seedName}} s?",
   "confirmation.enterAmount": "Masukkan Jumlah untuk Dijual:",
-  "confirmation.sellSeasonalArtefact": "Hadiah ini adalah artefak musiman! Apakah Anda yakin ingin menjualnya?",
+  "confirmation.sellChapterArtefact": "Hadiah ini adalah artefak musiman! Apakah Anda yakin ingin menjualnya?",
   "confirmation.valuableTreasure": "Hadiah ini sangat berharga! Apakah Anda yakin ingin menjualnya?",
   "confirm.skillClaim": "Apakah Anda yakin ingin mengklaim keterampilan?",
   "faction-intro.one": "Selamat datang di rumah faksi baru Anda... Kami membutuhkan bantuan Anda untuk menjadi lebih kuat dan mendominasi kerajaan.",
@@ -2520,7 +2520,7 @@
   "npcDialogues.bert.intro2": "Ah, roh kerabat! Sunflorea adalah rumah bagi harta karun yang tak terhitung jumlahnya...",
   "npcDialogues.bert.intro3": "Salam, pembawa misterius! Di Sunflorea, beberapa item menuntut Pengiriman...",
   "npcDialogues.bert.intro4": "Halo, pencari yang tersembunyi! Pesona Sunflorea dapat dikategorikan menjadi dua...",
-  "bert.day": "Anda tidak dapat menarik item ini selama 3 hari setelah mengklaim {{seasonalTicket}} s.",
+  "bert.day": "Anda tidak dapat menarik item ini selama 3 hari setelah mengklaim {{chapterTicket}} s.",
   "npcDialogues.bert.positiveDelivery1": "Luar biasa! Kau membawakanku semua yang kubutuhkan...",
   "npcDialogues.bert.positiveDelivery2": "Oh, penemuan yang menarik! Anda telah membawakan saya barang yang tepat yang saya cari...",
   "npcDialogues.bert.positiveDelivery3": "Ah, sudah waktunya! Anda telah memperoleh barang yang tepat yang saya cari. Bagus!",
@@ -2742,10 +2742,10 @@
   "plaza.magicButton.query": "Sebuah tombol ajaib telah muncul di alun-alun. Apakah Anda ingin menekannya?",
   "nyonStatue.memory": "Untuk mengenang",
   "nyonStatue.description": "Ksatria legendaris yang bertanggung jawab untuk membersihkan goblin dari tambang. Tak lama setelah kemenangannya dia meninggal karena keracunan dari konspirator Goblin. Warga Bunga Matahari mendirikan patung ini dengan baju besinya untuk memperingati penaklukannya.",
-  "obsessionDialogue.line1": "Ah, {{itemName}}! Aku hanya ingin melihatnya, bukan memilikinya. Tunjukkan kepada saya, dan {{seasonalTicket}} s akan menjadi hadiah Anda.",
-  "obsessionDialogue.line2": "Anda telah membawa {{itemName}}? Saya hanya ingin menatapnya. Coba kulihat, dan {{seasonalTicket}} s akan menjadi milikmu.",
-  "obsessionDialogue.line4": "Itu {{itemName}}! Saya tidak ingin menyimpannya, hanya untuk melihatnya. Tunjukkan padaku, dan {{seasonalTicket}} s adalah milikmu.",
-  "obsessionDialogue.line5": "Anda menawarkan tampilan {{itemName}}? Yang saya minta hanyalah melihatnya secara singkat. Untuk kemurahan hati Anda, {{seasonalTicket}} s akan diberikan kepada Anda.",
+  "obsessionDialogue.line1": "Ah, {{itemName}}! Aku hanya ingin melihatnya, bukan memilikinya. Tunjukkan kepada saya, dan {{chapterTicket}} s akan menjadi hadiah Anda.",
+  "obsessionDialogue.line2": "Anda telah membawa {{itemName}}? Saya hanya ingin menatapnya. Coba kulihat, dan {{chapterTicket}} s akan menjadi milikmu.",
+  "obsessionDialogue.line4": "Itu {{itemName}}! Saya tidak ingin menyimpannya, hanya untuk melihatnya. Tunjukkan padaku, dan {{chapterTicket}} s adalah milikmu.",
+  "obsessionDialogue.line5": "Anda menawarkan tampilan {{itemName}}? Yang saya minta hanyalah melihatnya secara singkat. Untuk kemurahan hati Anda, {{chapterTicket}} s akan diberikan kepada Anda.",
   "offer.okxOffer": "Halo Petani, saya punya penawaran OKX eksklusif untuk Anda!",
   "offer.beginWithNFT": "Untuk memulai, Anda perlu membuat NFT Farm gratis. Ini akan mencakup:",
   "offer.getStarterPack": "Dapatkan Starter Pack Sekarang",
@@ -3426,8 +3426,8 @@
   "description.gold.beetle.boost": "+0.1 Emas",
   "description.stone.beetle.boost": "+0.1 Batu",
   "description.iron.beetle.boost": "+0.1 Besi",
-  "available.all.season": "Tersedia sepanjang musim",
-  "megastore.message.allSeason": "Berikut adalah item yang tersedia untuk dibeli sepanjang musim. Pastikan untuk mengambilnya sebelum akhir musim!",
+  "available.all.chapter": "Tersedia sepanjang musim",
+  "megastore.message.allChapter": "Berikut adalah item yang tersedia untuk dibeli sepanjang musim. Pastikan untuk mengambilnya sebelum akhir musim!",
   "monthly": "Bulanan",
   "seasonal": "musiman",
   "mega.collectibles": "Koleksi Mega",
@@ -3528,9 +3528,9 @@
   "gems.update": "Pembaruan permata",
   "gems.intro": "Untuk mempersiapkan onboarding pemain baru, kami telah mengganti Block Bucks dengan mata uang baru... Permata!",
   "gems.intro.two": "Anda akan menerima 20 Permata untuk setiap Block Buck yang Anda miliki.",
-  "birdieplaza.commonMethod": "Metode yang paling umum untuk mendapatkan {{seasonalTicket}} s adalah dengan mengumpulkan sumber daya atau mengumpulkan item lain yang diminta, dan kemudian mengirimkannya ke Bumpkins di Plaza dan beberapa area lainnya.",
-  "birdieplaza.seasonQuests": "Musim ini memiliki pencarian menarik, koleksi langka, dan pakaian eksklusif yang bisa Anda peroleh.",
-  "birdieplaza.craftItems": "Untuk mendapatkan barang-barang langka ini, Anda harus mengumpulkan {{seasonalTicket}} s dan menukarnya di Stella's Megastore atau menawar di Rumah Lelang.",
+  "birdieplaza.commonMethod": "Metode yang paling umum untuk mendapatkan {{chapterTicket}} s adalah dengan mengumpulkan sumber daya atau mengumpulkan item lain yang diminta, dan kemudian mengirimkannya ke Bumpkins di Plaza dan beberapa area lainnya.",
+  "birdieplaza.chapterQuests": "Musim ini memiliki pencarian menarik, koleksi langka, dan pakaian eksklusif yang bisa Anda peroleh.",
+  "birdieplaza.craftItems": "Untuk mendapatkan barang-barang langka ini, Anda harus mengumpulkan {{chapterTicket}} s dan menukarnya di Stella's Megastore atau menawar di Rumah Lelang.",
   "reward.streak.oneYear": "Hadiah beruntun 365 hari",
   "chapter.codex.nextDrop.available": "{{dropSupply}} tersedia",
   "description.hoot.boost": "+0,5 Gandum, Lobak, Kangkung, Beras, Barley",
@@ -3583,7 +3583,7 @@
   "description.chicken": "Sumber telur segar dan bulu lembut yang andal, ayam ini dengan senang hati melakukan bagiannya dengan perawatan yang tepat.",
   "description.cow": "Sapi yang lembut ini menyediakan susu segar dan kulit yang tahan lama. Jaga agar tetap bahagia dengan banyak makanan & kasih sayang.",
   "description.sheep": "Domba berbulu ini menyediakan wol biasa dan wol merino mewah. Tetap senang untuk hasil yang paling lembut!",
-  "obsessionDialogue.line3": "Apakah itu {{itemName}} yang Anda miliki? Sekadar pandangan adalah semua yang saya inginkan. Untuk ini, Anda akan menerima {{seasonalTicket}} s.",
+  "obsessionDialogue.line3": "Apakah itu {{itemName}} yang Anda miliki? Sekadar pandangan adalah semua yang saya inginkan. Untuk ini, Anda akan menerima {{chapterTicket}} s.",
   "competition.maybeLater": "Mungkin nanti",
   "world.lvl.requirement": "Tingkat {{lvl}}",
   "world.factionMembersOnly": "Hanya anggota Fraksi",
@@ -4051,7 +4051,7 @@
   "description.brush": "Sikat Hewan. Gunakan ini untuk menunjukkan kasih sayang kepada hewan Anda.",
   "description.music.box": "Memutar musik untuk hewan. Gunakan ini untuk menunjukkan kasih sayang kepada hewan Anda.",
   "levelUpMax": "Tingkat Maks!",
-  "birdieplaza.choresAndRewards": "Anda juga bisa mendapatkan {{seasonalTicket}} s dengan tugas mingguan, hadiah peti harian, Obsesi Aneh Bert, dan sistem hadiah!",
+  "birdieplaza.choresAndRewards": "Anda juga bisa mendapatkan {{chapterTicket}} s dengan tugas mingguan, hadiah peti harian, Obsesi Aneh Bert, dan sistem hadiah!",
   "description.community.coin": "(WIP) Koin bernilai yang disediakan untuk digunakan di masa mendatang di Sunflower Land.",
   "bedsMigration.bedsNeededDescription2": "Setiap tempat tidur unik dapat menampung satu petani.",
   "bedsMigration.bedsNeededDescription3": "Tempatkan tempat tidur untuk menyewa lebih banyak petani!",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "Barang terjual",
   "marketplace.congratulationsItemSold": "Selamat, barang Anda telah terjual!",
   "withdraw.taxFree": "Goblin mengenakan pajak atas SFL yang diperoleh dalam game. Ini tidak termasuk deposito & pasar.",
-  "bounties.board.ticketAmount": "Jumlah {{seasonalTicket}} s akan bervariasi setiap minggu berdasarkan permintaan.",
+  "bounties.board.ticketAmount": "Jumlah {{chapterTicket}} s akan bervariasi setiap minggu berdasarkan permintaan.",
   "marketplace.listing.cancelling": "Membatalkan listing",
   "marketplace.listing.cancelling.success": "Selamat, Anda telah berhasil membatalkan iklan Anda!",
   "marketplace.listing.cancelling.failure": "Ups, ada yang tidak beres. Silakan coba lagi.",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} sisa pembelian harian",
   "remaining.free.purchase": "1 pembelian harian tersisa",
   "statements.potionRule.four": "Ketika permainan selesai, skor untuk upaya terakhir Anda akan menentukan hadiah Anda.",
-  "obsessionDialogue.codex": "Apakah itu {{itemName}} yang Anda miliki? Pergilah ke alun-alun untuk menemukan Bert dan menunjukkannya kepadanya, dan dia akan memberi Anda {{seasonalTicket}} s sebagai balasannya.",
+  "obsessionDialogue.codex": "Apakah itu {{itemName}} yang Anda miliki? Pergilah ke alun-alun untuk menemukan Bert dan menunjukkannya kepadanya, dan dia akan memberi Anda {{chapterTicket}} s sebagai balasannya.",
   "bounties.board.travel": "Bepergian ke alun-alun dan temukan Poppy untuk memenuhi karunia ini",
   "description.trade.points": "Diperoleh dari perdagangan barang koleksi dan barang yang dapat dikenakan di pasar. Dapat ditukar dengan hadiah dalam game.",
   "reward.collectible": "Koleksi untuk Peternakan Anda",
