--- a/src/lib/i18n/dictionaries/it.json
+++ b/src/lib/i18n/dictionaries/it.json
@@ -122,13 +122,13 @@
   "beehive.hives.plural": "orticaria",
   "birdieplaza.birdieIntro": "Ehi, sono Birdie, la Bumpkin più bella in circolazione!",
   "birdieplaza.admiringOutfit": "Ho notato che ammiravi il mio abbigliamento. Non è fantastico?!?",
-  "birdieplaza.currentSeason": "Attualmente siamo nella stagione {{currentSeason}} e i Bumpkins impazziscono per {{seasonalTicket}} s.",
-  "birdieplaza.collectTickets": "Raccogli abbastanza {{seasonalTicket}} e puoi creare NFT rari. È così che mi sono procurato questo abito raro!",
+  "birdieplaza.currentSeason": "Attualmente siamo nella stagione {{currentSeason}} e i Bumpkins impazziscono per {{chapterTicket}} s.",
+  "birdieplaza.collectTickets": "Raccogli abbastanza {{chapterTicket}} e puoi creare NFT rari. È così che mi sono procurato questo abito raro!",
   "birdieplaza.whatIsSeason": "Cos'è una stagione?",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "Puoi guadagnare {{seasonalTicket}} in diversi modi.",
-  "birdieplaza.gatherAndCraft": "Raccogli abbastanza {{seasonalTicket}} e potrai acquistare alcuni oggetti rari come ho fatto io.",
-  "birdieplaza.newSeasonIntro": "Ogni 3 mesi viene introdotta una nuova stagione a Sunflower Land.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "Puoi guadagnare {{chapterTicket}} in diversi modi.",
+  "birdieplaza.gatherAndCraft": "Raccogli abbastanza {{chapterTicket}} e potrai acquistare alcuni oggetti rari come ho fatto io.",
+  "birdieplaza.newChapterIntro": "Ogni 3 mesi viene introdotta una nuova stagione a Sunflower Land.",
   "description.speed.chicken.one": "Le tue galline ora produrranno uova il 10% più velocemente.",
   "description.banana.chicken": "Un pollo che fa crescere le banane. In che mondo viviamo.",
   "description.pharaoh.chicken": "Una gallina dominante, +1 Dig.",
@@ -554,7 +554,7 @@
   "confirmation.sell": "Sei sicuro di voler vendere {{amount}} {{name}} in cambio di {{coinAmount}} monete?",
   "confirmation.buyCrops": "Sei sicuro di voler spendere {{coinAmount}} monete per acquistare {{seedNo}} {{seedName}} s?",
   "confirmation.enterAmount": "Inserisci l'importo da vendere:",
-  "confirmation.sellSeasonalArtefact": "Questa ricompensa è un artefatto stagionale! Sei sicuro di volerlo vendere?",
+  "confirmation.sellChapterArtefact": "Questa ricompensa è un artefatto stagionale! Sei sicuro di volerlo vendere?",
   "confirmation.valuableTreasure": "Questa ricompensa è molto preziosa! Sei sicuro di volerlo vendere?",
   "confirm.skillClaim": "Sei sicuro di voler rivendicare l'abilità?",
   "faction-intro.one": "Benvenuto nella tua nuova casa di fazione... Abbiamo bisogno del tuo aiuto per diventare più potenti e dominare il regno.",
@@ -2478,7 +2478,7 @@
   "npcDialogues.bert.intro2": "Ah, spirito affine! Sunflorea custodisce innumerevoli tesori...",
   "npcDialogues.bert.intro3": "Saluti, portatore del misterioso! In Sunflorea, alcuni articoli richiedono la consegna...",
   "npcDialogues.bert.intro4": "Salve, cercatore del nascosto! Gli incantesimi di Sunflorea possono essere suddivisi in due...",
-  "bert.day": "Non puoi ritirare questo articolo per 3 giorni dopo aver richiesto {{seasonalTicket}} s.",
+  "bert.day": "Non puoi ritirare questo articolo per 3 giorni dopo aver richiesto {{chapterTicket}} s.",
   "npcDialogues.bert.positiveDelivery1": "Incredibile! Mi hai portato tutto ciò di cui ho bisogno...",
   "npcDialogues.bert.positiveDelivery2": "Oh, scoperta affascinante! Mi hai portato esattamente gli oggetti che cercavo...",
   "npcDialogues.bert.positiveDelivery3": "Ah, era ora! Avete acquistato esattamente gli oggetti che cercavo. Eccellente!",
@@ -2700,10 +2700,10 @@
   "plaza.magicButton.query": "Un pulsante magico è apparso nella piazza. Vuoi premerlo?",
   "nyonStatue.memory": "In ricordo di",
   "nyonStatue.description": "Il leggendario cavaliere responsabile dell'eliminazione dei goblin dalle miniere. Poco dopo la sua vittoria morì avvelenato da un cospiratore Goblin. I Sunflower Citizens eressero questa statua con la loro armatura per commemorare le sue conquiste.",
-  "obsessionDialogue.line1": "Ah, il {{itemName}}! Vorrei solo vederlo, non possederlo. Mostramelo e {{seasonalTicket}} s sarà la tua ricompensa.",
-  "obsessionDialogue.line2": "Hai portato il {{itemName}}? Voglio solo guardarlo. Fammi vedere e {{seasonalTicket}} s sarà tuo.",
-  "obsessionDialogue.line4": "Il {{itemName}}! Non voglio tenerlo, solo vederlo. Mostramelo e {{seasonalTicket}} sono tuoi.",
-  "obsessionDialogue.line5": "Offrite una vista del {{itemName}}? Tutto ciò che chiedo è di vederlo brevemente. Per la tua generosità, ti saranno concessi {{seasonalTicket}}.",
+  "obsessionDialogue.line1": "Ah, il {{itemName}}! Vorrei solo vederlo, non possederlo. Mostramelo e {{chapterTicket}} s sarà la tua ricompensa.",
+  "obsessionDialogue.line2": "Hai portato il {{itemName}}? Voglio solo guardarlo. Fammi vedere e {{chapterTicket}} s sarà tuo.",
+  "obsessionDialogue.line4": "Il {{itemName}}! Non voglio tenerlo, solo vederlo. Mostramelo e {{chapterTicket}} sono tuoi.",
+  "obsessionDialogue.line5": "Offrite una vista del {{itemName}}? Tutto ciò che chiedo è di vederlo brevemente. Per la tua generosità, ti saranno concessi {{chapterTicket}}.",
   "offer.okxOffer": "Salve Farmer, ho un'offerta OKX esclusiva per te!",
   "offer.beginWithNFT": "Per iniziare dovrai creare un Farm NFT gratuito. Ciò includerà:",
   "offer.getStarterPack": "Ottieni subito lo Starter Pack",
@@ -3395,8 +3395,8 @@
   "description.faction.mark": "Usali nel Faction Shop",
   "description.vase": "Un oggetto fragile dei tempi antichi",
   "islandupgrade.warning": "Assicurati di non avere raccolti, frutta, edifici, polli, crestone, fiori o miele in corso. Questi non potranno essere raccolti e verranno restituiti al tuo inventario. Sunstones, House, Market, Fire Pit e Workbench rimarranno sulla tua terra.",
-  "available.all.season": "disponibili per tutta la stagione",
-  "megastore.message.allSeason": "Ecco gli articoli che sono disponibili per l'acquisto durante tutta la stagione. Assicuratevi di prenderlo prima della fine della stagione!",
+  "available.all.chapter": "disponibili per tutta la stagione",
+  "megastore.message.allChapter": "Ecco gli articoli che sono disponibili per l'acquisto durante tutta la stagione. Assicuratevi di prenderlo prima della fine della stagione!",
   "monthly": "Mensile",
   "seasonal": "Stagionale",
   "mega.collectibles": "Mega oggetti da collezione",
@@ -3528,9 +3528,9 @@
   "gems.update": "Aggiornamento delle gemme",
   "gems.intro": "Per prepararci all'onboarding di nuovi giocatori, abbiamo sostituito i Block Bucks con una nuova valuta: le gemme!",
   "gems.intro.two": "Riceverai 20 gemme per ogni Block Buck che possiedi.",
-  "birdieplaza.commonMethod": "Il metodo più comune per guadagnare {{seasonalTicket}} è raccogliere risorse o raccogliere altri oggetti richiesti e poi consegnarli a Bumpkins in the Plaza e in altre aree.",
-  "birdieplaza.seasonQuests": "Questa stagione offre missioni entusiasmanti, rari oggetti da collezione e dispositivi indossabili esclusivi che puoi guadagnare.",
-  "birdieplaza.craftItems": "Per ottenere questi oggetti rari, devi raccogliere {{seasonalTicket}} e cambiarli allo Stella's Megastore o fare un'offerta presso la Casa d'Aste.",
+  "birdieplaza.commonMethod": "Il metodo più comune per guadagnare {{chapterTicket}} è raccogliere risorse o raccogliere altri oggetti richiesti e poi consegnarli a Bumpkins in the Plaza e in altre aree.",
+  "birdieplaza.chapterQuests": "Questa stagione offre missioni entusiasmanti, rari oggetti da collezione e dispositivi indossabili esclusivi che puoi guadagnare.",
+  "birdieplaza.craftItems": "Per ottenere questi oggetti rari, devi raccogliere {{chapterTicket}} e cambiarli allo Stella's Megastore o fare un'offerta presso la Casa d'Aste.",
   "reward.streak.oneYear": "Premi per una serie di 365 giorni",
   "chapter.codex.nextDrop.available": "{{dropSupply}} disponibile",
   "description.hoot.boost": "+0,5 frumento, ravanello, cavolo riccio, riso, orzo",
@@ -3583,7 +3583,7 @@
   "description.chicken": "Fonte affidabile di uova fresche e morbide piume, questo pollo fa volentieri la sua parte con la giusta cura.",
   "description.cow": "Questa delicata mucca fornisce latte fresco e pelle resistente. Rendila felice con cibo e affetto in abbondanza.",
   "description.sheep": "Questa soffice pecora fornisce sia lana normale che lussuosa lana merino. Rendila felice per i risultati più delicati!",
-  "obsessionDialogue.line3": "È il {{itemName}} che hai? Un semplice sguardo è tutto ciò che desidero. Per questo, riceverai {{seasonalTicket}} s.",
+  "obsessionDialogue.line3": "È il {{itemName}} che hai? Un semplice sguardo è tutto ciò che desidero. Per questo, riceverai {{chapterTicket}} s.",
   "competition.maybeLater": "Forse più tardi",
   "world.lvl.requirement": "Livello {{lvl}}",
   "world.factionMembersOnly": "Solo membri della fazione",
@@ -4051,7 +4051,7 @@
   "description.brush": "Spazzola per animali. Usalo per mostrare affetto ai tuoi animali.",
   "description.music.box": "Suona musica per gli animali. Usalo per mostrare affetto ai tuoi animali.",
   "levelUpMax": "Livello massimo!",
-  "birdieplaza.choresAndRewards": "Puoi guadagnare {{seasonalTicket}} anche con le faccende settimanali, i premi giornalieri per i bauli, la strana ossessione di Bert e il sistema di ricompense!",
+  "birdieplaza.choresAndRewards": "Puoi guadagnare {{chapterTicket}} anche con le faccende settimanali, i premi giornalieri per i bauli, la strana ossessione di Bert e il sistema di ricompense!",
   "description.community.coin": "(WIP) Una moneta di valore riservata per un uso futuro a Sunflower Land.",
   "bedsMigration.bedsNeededDescription2": "Ogni letto unico può ospitare un lavoratore agricolo.",
   "bedsMigration.bedsNeededDescription3": "Posiziona i letti per assumere altri braccianti agricoli!",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "Articolo venduto",
   "marketplace.congratulationsItemSold": "Congratulazioni, il tuo articolo è stato venduto!",
   "withdraw.taxFree": "I goblin ti tassano sugli SFL guadagnati nel gioco. Sono esclusi i depositi e il marketplace.",
-  "bounties.board.ticketAmount": "L'importo di {{seasonalTicket}} varierà ogni settimana in base alle richieste.",
+  "bounties.board.ticketAmount": "L'importo di {{chapterTicket}} varierà ogni settimana in base alle richieste.",
   "marketplace.listing.cancelling": "Annullamento dell'inserzione",
   "marketplace.listing.cancelling.success": "Congratulazioni, hai cancellato con successo la tua inserzione!",
   "marketplace.listing.cancelling.failure": "Ops, qualcosa è andato storto. Per favore riprova.",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} acquisti giornalieri rimanenti",
   "remaining.free.purchase": "1 acquisto giornaliero rimanente",
   "statements.potionRule.four": "Al termine del gioco, il punteggio dell'ultimo tentativo determinerà la tua ricompensa.",
-  "obsessionDialogue.codex": "È il {{itemName}} che hai? Raggiungi la piazza per trovare Bert e mostrarglielo, e in cambio ti darà {{seasonalTicket}} s.",
+  "obsessionDialogue.codex": "È il {{itemName}} che hai? Raggiungi la piazza per trovare Bert e mostrarglielo, e in cambio ti darà {{chapterTicket}} s.",
   "bounties.board.travel": "Raggiungi la piazza e trova Poppy per soddisfare questi doni",
   "description.trade.points": "Guadagnato scambiando oggetti da collezione e indossabili sul mercato. Possono essere scambiati con ricompense di gioco.",
   "reward.collectible": "Un oggetto da collezione per la tua fattoria",
