--- a/src/lib/i18n/dictionaries/ja.json
+++ b/src/lib/i18n/dictionaries/ja.json
@@ -123,13 +123,13 @@
   "beehive.hives.plural": "じんましん",
   "birdieplaza.birdieIntro": "こんにちは、私はバーディー、周りで一番美しいバンプキンです！",
   "birdieplaza.admiringOutfit": "あなたが私の服を賞賛しているのに気づきました。素晴らしくない？！？",
-  "birdieplaza.currentSeason": "現在 {{currentSeason}} シーズンに入っており、バンプキンズは {{seasonalTicket}} に夢中になっています。",
-  "birdieplaza.collectTickets": "十分な {{seasonalTicket}} を集めると、レアなNFTを作成できます。そんなわけで、このレアな衣装を手に入れました！",
+  "birdieplaza.currentSeason": "現在 {{currentSeason}} シーズンに入っており、バンプキンズは {{chapterTicket}} に夢中になっています。",
+  "birdieplaza.collectTickets": "十分な {{chapterTicket}} を集めると、レアなNFTを作成できます。そんなわけで、このレアな衣装を手に入れました！",
   "birdieplaza.whatIsSeason": "シーズンとは？",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "さまざまな方法で {{seasonalTicket}} を獲得できます。",
-  "birdieplaza.gatherAndCraft": "{{seasonalTicket}} をたくさん集めれば、私のようにレアなアイテムを購入できるようになります。",
-  "birdieplaza.newSeasonIntro": "サンフラワーランドでは、3か月ごとに新しいシーズンが始まります。",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "さまざまな方法で {{chapterTicket}} を獲得できます。",
+  "birdieplaza.gatherAndCraft": "{{chapterTicket}} をたくさん集めれば、私のようにレアなアイテムを購入できるようになります。",
+  "birdieplaza.newChapterIntro": "サンフラワーランドでは、3か月ごとに新しいシーズンが始まります。",
   "description.speed.chicken.one": "鶏の卵生産が 10% 速くなりました。",
   "description.banana.chicken": "バナナを美味しくするチキン。私たちはなんて素晴らしい世界に住んでいるのでしょう。",
   "description.pharaoh.chicken": "ルーリングチキン、+1ディグ",
@@ -558,7 +558,7 @@
   "confirmation.sell": "本当に {{amount}} {{name}} を {{coinAmount}} コインで売ってもよろしいですか？",
   "confirmation.buyCrops": "本当に {{coinAmount}} コインを使って {{seedNo}} {{seedName}} sを購入してもよろしいですか？",
   "confirmation.enterAmount": "売却金額を入力:",
-  "confirmation.sellSeasonalArtefact": "この賞金は季節のアーティファクトです！本当に売りたいの？",
+  "confirmation.sellChapterArtefact": "この賞金は季節のアーティファクトです！本当に売りたいの？",
   "confirmation.valuableTreasure": "この賞金はとても貴重です！本当に売りたいの？",
   "confirm.skillClaim": "本当にスキルを申請してもよろしいですか？",
   "faction-intro.one": "新しいファクションハウスへようこそ...より強力になり、王国を支配するためにはあなたの助けが必要です。",
@@ -2520,7 +2520,7 @@
   "npcDialogues.bert.intro2": "ああ、気の合う精神！サンフロリアには数え切れないほどの宝物があります...",
   "npcDialogues.bert.intro3": "ミステリアスの担い手、ご挨拶！サンフロリアでは、一部の商品は配送が必要です...",
   "npcDialogues.bert.intro4": "こんにちは、隠されたものを求める人！サンフロレアのエンチャントは2つに分類できます...",
-  "bert.day": "{{seasonalTicket}} を申請してから3日間は、このアイテムを出金できません。",
+  "bert.day": "{{chapterTicket}} を申請してから3日間は、このアイテムを出金できません。",
   "npcDialogues.bert.positiveDelivery1": "信じられない！あなたは私に必要なものをすべて持ってきてくれました...",
   "npcDialogues.bert.positiveDelivery2": "ああ、魅力的な発見！探していたアイテムとまったく同じものを持ってきてくれたね...",
   "npcDialogues.bert.positiveDelivery3": "ああ、そろそろ時間だ！私が探していたアイテムとまったく同じものを手に入れました。素晴らしい！",
@@ -2742,10 +2742,10 @@
   "plaza.magicButton.query": "広場に魔法のボタンが現れました。押したいかい？",
   "nyonStatue.memory": "を記念して",
   "nyonStatue.description": "地雷からゴブリンを一掃した伝説の騎士。勝利して間もなく、彼はゴブリンの共謀者に毒殺されて死亡した。ヒマワリの市民たちは、彼の征服を記念して、彼の鎧を使ってこの像を建てました。",
-  "obsessionDialogue.line1": "ああ、{{itemName}}！私はそれを見たいだけで、所有したいわけではない。私に見せてください。そうすれば {{seasonalTicket}} sが報酬になります。",
-  "obsessionDialogue.line2": "{{itemName}} を持ってきましたか？ただじっと見つめたいだけです。見せて、{{seasonalTicket}} は君のものだ。",
-  "obsessionDialogue.line4": "ザ・{{itemName}}!見守るためだけに持っておきたくない。私に見せてください。{{seasonalTicket}} はあなたのものです。",
-  "obsessionDialogue.line5": "{{itemName}} の景色が見えますか？私がお願いするのは、簡単に見てみることだけです。あなたのご厚意により、{{seasonalTicket}} が授与されます。",
+  "obsessionDialogue.line1": "ああ、{{itemName}}！私はそれを見たいだけで、所有したいわけではない。私に見せてください。そうすれば {{chapterTicket}} sが報酬になります。",
+  "obsessionDialogue.line2": "{{itemName}} を持ってきましたか？ただじっと見つめたいだけです。見せて、{{chapterTicket}} は君のものだ。",
+  "obsessionDialogue.line4": "ザ・{{itemName}}!見守るためだけに持っておきたくない。私に見せてください。{{chapterTicket}} はあなたのものです。",
+  "obsessionDialogue.line5": "{{itemName}} の景色が見えますか？私がお願いするのは、簡単に見てみることだけです。あなたのご厚意により、{{chapterTicket}} が授与されます。",
   "offer.okxOffer": "ハウディファーマー、OKX限定のオファーがあります！",
   "offer.beginWithNFT": "まず、無料のファームNFTをミントする必要があります。これには以下が含まれます。",
   "offer.getStarterPack": "スターターパックを今すぐ入手",
@@ -3426,8 +3426,8 @@
   "description.gold.beetle.boost": "+0.1 ゴールド",
   "description.stone.beetle.boost": "+0.1 ストーン",
   "description.iron.beetle.boost": "+0.1 アイアン",
-  "available.all.season": "オールシーズン利用可能",
-  "megastore.message.allSeason": "シーズンを通して購入できるアイテムをご紹介します。シーズンが終わる前に必ず手に入れてください。",
+  "available.all.chapter": "オールシーズン利用可能",
+  "megastore.message.allChapter": "シーズンを通して購入できるアイテムをご紹介します。シーズンが終わる前に必ず手に入れてください。",
   "monthly": "毎月",
   "seasonal": "季節限定",
   "mega.collectibles": "メガコレクティブル",
@@ -3528,9 +3528,9 @@
   "gems.update": "Gem アップデート",
   "gems.intro": "新規プレイヤーのオンボーディングに備えて、Block Bucksを新しい通貨「ジェム」に置き換えました！",
   "gems.intro.two": "所有しているブロックバックごとに20ジェムを受け取ります。",
-  "birdieplaza.commonMethod": "{{seasonalTicket}} を獲得する最も一般的な方法は、資源を集めるか、他のリクエストされたアイテムを集めて、プラザや他のエリアのバンプキンに届けることです。",
-  "birdieplaza.seasonQuests": "今シーズンには、エキサイティングなクエスト、レアな収集品、限定ウェアラブルが手に入ります。",
-  "birdieplaza.craftItems": "これらのレアアイテムを入手するには、{{seasonalTicket}} を集めてステラのメガストアで交換するか、オークションハウスで入札する必要があります。",
+  "birdieplaza.commonMethod": "{{chapterTicket}} を獲得する最も一般的な方法は、資源を集めるか、他のリクエストされたアイテムを集めて、プラザや他のエリアのバンプキンに届けることです。",
+  "birdieplaza.chapterQuests": "今シーズンには、エキサイティングなクエスト、レアな収集品、限定ウェアラブルが手に入ります。",
+  "birdieplaza.craftItems": "これらのレアアイテムを入手するには、{{chapterTicket}} を集めてステラのメガストアで交換するか、オークションハウスで入札する必要があります。",
   "reward.streak.oneYear": "365 日連続リワード",
   "chapter.codex.nextDrop.available": "{{dropSupply}} ご利用可能",
   "description.hoot.boost": "+0.5 小麦、大根、ケール、米、大麦",
@@ -3583,7 +3583,7 @@
   "description.chicken": "新鮮な卵と柔らかい羽毛の信頼できる供給源であるこの鶏肉は、適切な手入れをすれば喜んでその役割を果たします。",
   "description.cow": "この優しい牛は、新鮮なミルクと丈夫な革を使用しています。たっぷりの食べ物と愛情を込めて幸せに保ちましょう。",
   "description.sheep": "このふわふわの羊は、通常のウールと高級なメリノウールの両方を備えています。最高にソフトな仕上がりになるのでハッピーな状態を保ちましょう。",
-  "obsessionDialogue.line3": "それはあなたが持っている {{itemName}} ですか？一目見ただけでいいんだよ。これにより、{{seasonalTicket}} が届きます。",
+  "obsessionDialogue.line3": "それはあなたが持っている {{itemName}} ですか？一目見ただけでいいんだよ。これにより、{{chapterTicket}} が届きます。",
   "competition.maybeLater": "たぶん後で",
   "world.lvl.requirement": "レベル {{lvl}}",
   "world.factionMembersOnly": "ファクションメンバーのみ",
@@ -4051,7 +4051,7 @@
   "description.brush": "アニマルブラシ。これを使って動物への愛情を示しましょう。",
   "description.music.box": "動物に音楽をかけます。これを使って動物への愛情を示しましょう。",
   "levelUpMax": "最大レベル！",
-  "birdieplaza.choresAndRewards": "また、毎週の雑用、毎日のチェスト報酬、バートのオッドオブセッション、バウンティシステムによって {{seasonalTicket}} を獲得することもできます！",
+  "birdieplaza.choresAndRewards": "また、毎週の雑用、毎日のチェスト報酬、バートのオッドオブセッション、バウンティシステムによって {{chapterTicket}} を獲得することもできます！",
   "description.community.coin": "(WIP) 将来サンフラワーランドで使えるように予約されている貴重なコイン。",
   "bedsMigration.bedsNeededDescription2": "それぞれの個性的なベッドで片手でも眠れます。",
   "bedsMigration.bedsNeededDescription3": "ベッドを置いて農夫をもっと雇おう！",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "商品が販売されました",
   "marketplace.congratulationsItemSold": "おめでとうございます。商品は売れました。",
   "withdraw.taxFree": "ゴブリンはゲーム内で獲得したSFLに課税します。これにはデポジットとマーケットプレイスは含まれません。",
-  "bounties.board.ticketAmount": "{{seasonalTicket}} の金額は、リクエストに応じて毎週異なります。",
+  "bounties.board.ticketAmount": "{{chapterTicket}} の金額は、リクエストに応じて毎週異なります。",
   "marketplace.listing.cancelling": "出品をキャンセルする",
   "marketplace.listing.cancelling.success": "おめでとうございます。出品は正常にキャンセルされました。",
   "marketplace.listing.cancelling.failure": "おっと、何かがおかしくなりました。もう一度試してください。",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} 日次購入残高",
   "remaining.free.purchase": "1 日の購入が残り",
   "statements.potionRule.four": "ゲームが完了すると、最後のトライのスコアによって報酬が決まります。",
-  "obsessionDialogue.codex": "それはあなたが持っている {{itemName}} ですか？広場に行ってバートを探し、彼に見せてください。そうすれば、バートはお返しに {{seasonalTicket}} をくれます。",
+  "obsessionDialogue.codex": "それはあなたが持っている {{itemName}} ですか？広場に行ってバートを探し、彼に見せてください。そうすれば、バートはお返しに {{chapterTicket}} をくれます。",
   "bounties.board.travel": "広場に行き、ポピーを見つけてこれらの賞金を稼ぎましょう",
   "description.trade.points": "マーケットプレイスで収集品やウェアラブルを取引することで獲得できます。ゲーム内の報酬と交換できます。",
   "reward.collectible": "農場用の収集品",
