--- a/src/lib/i18n/dictionaries/ms.json
+++ b/src/lib/i18n/dictionaries/ms.json
@@ -123,13 +123,13 @@
   "beehive.hives.plural": "sarang",
   "birdieplaza.birdieIntro": "Hei sana, saya Birdie, Bumpkin yang paling indah di sekitar!",
   "birdieplaza.admiringOutfit": "Saya perhatikan anda mengagumi pakaian saya. Bukankah ia hebat?!?",
-  "birdieplaza.currentSeason": "Kami kini berada dalam Musim {{currentSeason}} dan Bumpkins menjadi gila untuk {{seasonalTicket}} s.",
-  "birdieplaza.collectTickets": "Kumpulkan cukup {{seasonalTicket}} s dan anda boleh membuat NFT yang jarang berlaku. Itulah bagaimana saya mendapat pakaian langka ini!",
+  "birdieplaza.currentSeason": "Kami kini berada dalam Musim {{currentSeason}} dan Bumpkins menjadi gila untuk {{chapterTicket}} s.",
+  "birdieplaza.collectTickets": "Kumpulkan cukup {{chapterTicket}} s dan anda boleh membuat NFT yang jarang berlaku. Itulah bagaimana saya mendapat pakaian langka ini!",
   "birdieplaza.whatIsSeason": "Apa itu musim?",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "Anda boleh memperoleh {{seasonalTicket}} dalam pelbagai cara.",
-  "birdieplaza.gatherAndCraft": "Kumpulkan cukup {{seasonalTicket}} s dan anda akan dapat membeli beberapa barang langka seperti yang saya lakukan.",
-  "birdieplaza.newSeasonIntro": "Setiap 3 bulan musim baru diperkenalkan di Sunflower Land.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "Anda boleh memperoleh {{chapterTicket}} dalam pelbagai cara.",
+  "birdieplaza.gatherAndCraft": "Kumpulkan cukup {{chapterTicket}} s dan anda akan dapat membeli beberapa barang langka seperti yang saya lakukan.",
+  "birdieplaza.newChapterIntro": "Setiap 3 bulan musim baru diperkenalkan di Sunflower Land.",
   "description.speed.chicken.one": "Ayam anda kini akan menghasilkan telur 10% lebih cepat.",
   "description.banana.chicken": "Ayam yang meningkatkan pisang. Dunia apa yang kita hidup.",
   "description.pharaoh.chicken": "Ayam yang memerintah, +1 Dig.",
@@ -558,7 +558,7 @@
   "confirmation.sell": "Adakah anda pasti ingin menjual {{amount}} {{name}} untuk {{coinAmount}} Syiling?",
   "confirmation.buyCrops": "Adakah anda pasti ingin membelanjakan {{coinAmount}} Syiling untuk membeli {{seedNo}} {{seedName}} s?",
   "confirmation.enterAmount": "Masukkan jumlah untuk dijual:",
-  "confirmation.sellSeasonalArtefact": "Hadiah ini adalah artefak bermusim! Adakah anda pasti mahu menjualnya?",
+  "confirmation.sellChapterArtefact": "Hadiah ini adalah artefak bermusim! Adakah anda pasti mahu menjualnya?",
   "confirmation.valuableTreasure": "Hadiah ini sangat berharga! Adakah anda pasti mahu menjualnya?",
   "confirm.skillClaim": "Adakah anda pasti ingin menuntut kemahiran itu?",
   "faction-intro.one": "Selamat datang ke rumah puak baru anda... Kami memerlukan bantuan anda untuk menjadi lebih kuat dan menguasai kerajaan.",
@@ -2520,7 +2520,7 @@
   "npcDialogues.bert.intro2": "Ah, semangat saudara! Sunflorea adalah rumah kepada khazanah yang tidak terkira banyaknya...",
   "npcDialogues.bert.intro3": "Salam, pembawa misteri! Di Sunflorea, beberapa item menuntut Penghantaran...",
   "npcDialogues.bert.intro4": "Halo, pencari yang tersembunyi! Pesona Sunflorea boleh dikategorikan kepada dua...",
-  "bert.day": "Anda tidak boleh menarik balik item ini selama 3 hari selepas menuntut {{seasonalTicket}} s.",
+  "bert.day": "Anda tidak boleh menarik balik item ini selama 3 hari selepas menuntut {{chapterTicket}} s.",
   "npcDialogues.bert.positiveDelivery1": "Luar biasa! Anda telah membawa saya semua yang saya perlukan...",
   "npcDialogues.bert.positiveDelivery2": "Oh, penemuan menarik! Anda telah membawa saya barangan tepat yang saya cari...",
   "npcDialogues.bert.positiveDelivery3": "Ah, sudah tiba masanya! Anda telah memperoleh barang yang tepat yang saya cari. Cemerlang!",
@@ -2742,10 +2742,10 @@
   "plaza.magicButton.query": "Butang ajaib telah muncul di plaza. Adakah anda mahu menekannya?",
   "nyonStatue.memory": "Dalam ingatan",
   "nyonStatue.description": "Ksatria legenda yang bertanggungjawab membersihkan goblin dari lombong. Tidak lama selepas kemenangannya, dia meninggal kerana keracunan dari konspirator Goblin. Warganegara Bunga Matahari mendirikan patung ini dengan perisai untuk memperingati penaklukannya.",
-  "obsessionDialogue.line1": "Ah, {{itemName}}! Saya hanya ingin melihatnya, bukan memiliki. Tunjukkan kepada saya, dan {{seasonalTicket}} s akan menjadi ganjaran anda.",
-  "obsessionDialogue.line2": "Anda telah membawa {{itemName}}? Saya hanya mahu melihatnya. Biar saya lihat, dan {{seasonalTicket}} s akan menjadi milik anda.",
-  "obsessionDialogue.line4": "{{itemName}}! Saya tidak mahu menyimpannya, hanya untuk melihatnya. Tunjukkan kepada saya, dan {{seasonalTicket}} s adalah milik anda.",
-  "obsessionDialogue.line5": "Anda menawarkan pemandangan {{itemName}}? Apa yang saya minta ialah melihatnya secara ringkas. Untuk kemurahan hati anda, {{seasonalTicket}} s akan diberikan kepada anda.",
+  "obsessionDialogue.line1": "Ah, {{itemName}}! Saya hanya ingin melihatnya, bukan memiliki. Tunjukkan kepada saya, dan {{chapterTicket}} s akan menjadi ganjaran anda.",
+  "obsessionDialogue.line2": "Anda telah membawa {{itemName}}? Saya hanya mahu melihatnya. Biar saya lihat, dan {{chapterTicket}} s akan menjadi milik anda.",
+  "obsessionDialogue.line4": "{{itemName}}! Saya tidak mahu menyimpannya, hanya untuk melihatnya. Tunjukkan kepada saya, dan {{chapterTicket}} s adalah milik anda.",
+  "obsessionDialogue.line5": "Anda menawarkan pemandangan {{itemName}}? Apa yang saya minta ialah melihatnya secara ringkas. Untuk kemurahan hati anda, {{chapterTicket}} s akan diberikan kepada anda.",
   "offer.okxOffer": "Hello Farmer, saya mempunyai tawaran OKX eksklusif untuk anda!",
   "offer.beginWithNFT": "Untuk memulakan, anda perlu membentuk NFT Farm percuma. Ini akan merangkumi:",
   "offer.getStarterPack": "Dapatkan Pek Permulaan Sekarang",
@@ -3426,8 +3426,8 @@
   "description.gold.beetle.boost": "+0.1 Emas",
   "description.stone.beetle.boost": "+0.1 Batu",
   "description.iron.beetle.boost": "+0.1 Besi",
-  "available.all.season": "Tersedia sepanjang musim",
-  "megastore.message.allSeason": "Berikut adalah item yang boleh dibeli sepanjang musim. Pastikan anda merebutnya sebelum akhir musim!",
+  "available.all.chapter": "Tersedia sepanjang musim",
+  "megastore.message.allChapter": "Berikut adalah item yang boleh dibeli sepanjang musim. Pastikan anda merebutnya sebelum akhir musim!",
   "monthly": "Bulanan",
   "seasonal": "Bermusim",
   "mega.collectibles": "Koleksi Mega",
@@ -3528,9 +3528,9 @@
   "gems.update": "Kemas kini permata",
   "gems.intro": "Untuk mempersiapkan diri untuk memasuki pemain baru, kami telah menggantikan Block Bucks dengan mata wang baru... Permata!",
   "gems.intro.two": "Anda akan menerima 20 Permata untuk setiap Block Buck yang anda miliki.",
-  "birdieplaza.commonMethod": "Kaedah yang paling biasa untuk mendapatkan {{seasonalTicket}} s adalah dengan mengumpulkan sumber atau mengumpul item lain yang diminta, dan kemudian menghantarnya ke Bumpkins di Plaza dan beberapa kawasan lain.",
-  "birdieplaza.seasonQuests": "Musim ini mempunyai pencarian menarik, koleksi langka dan barang pakai eksklusif yang boleh anda perolehi.",
-  "birdieplaza.craftItems": "Untuk mendapatkan barang-barang langka ini, anda mesti mengumpul {{seasonalTicket}} s dan menukarnya di Stella's Megastore atau membida di Rumah Lelongan.",
+  "birdieplaza.commonMethod": "Kaedah yang paling biasa untuk mendapatkan {{chapterTicket}} s adalah dengan mengumpulkan sumber atau mengumpul item lain yang diminta, dan kemudian menghantarnya ke Bumpkins di Plaza dan beberapa kawasan lain.",
+  "birdieplaza.chapterQuests": "Musim ini mempunyai pencarian menarik, koleksi langka dan barang pakai eksklusif yang boleh anda perolehi.",
+  "birdieplaza.craftItems": "Untuk mendapatkan barang-barang langka ini, anda mesti mengumpul {{chapterTicket}} s dan menukarnya di Stella's Megastore atau membida di Rumah Lelongan.",
   "reward.streak.oneYear": "Ganjaran rentetan 365 hari",
   "chapter.codex.nextDrop.available": "{{dropSupply}} tersedia",
   "description.hoot.boost": "+0.5 Gandum, Lobak, Kale, Beras, Barli",
@@ -3583,7 +3583,7 @@
   "description.chicken": "Sumber telur segar dan bulu lembut yang boleh dipercayai, ayam ini dengan senang hati melakukan perganannya dengan penjagaan yang betul.",
   "description.cow": "Lembu lembut ini menyediakan susu segar dan kulit tahan lama. Pastikan ia gembira dengan banyak makanan & kasih sayang.",
   "description.sheep": "Domba berbulu ini menyediakan bulu biasa dan bulu merino mewah. Pastikan ia gembira untuk hasil yang paling lembut!",
-  "obsessionDialogue.line3": "Adakah itu {{itemName}} yang anda ada? Pandangan semata-mata adalah semua yang saya inginkan. Untuk ini, anda akan menerima {{seasonalTicket}} s.",
+  "obsessionDialogue.line3": "Adakah itu {{itemName}} yang anda ada? Pandangan semata-mata adalah semua yang saya inginkan. Untuk ini, anda akan menerima {{chapterTicket}} s.",
   "competition.maybeLater": "Mungkin kemudian",
   "world.lvl.requirement": "Lvl {{lvl}}",
   "world.factionMembersOnly": "Ahli puak sahaja",
@@ -4051,7 +4051,7 @@
   "description.brush": "Berus Haiwan. Gunakan ini untuk menunjukkan kasih sayang kepada haiwan anda.",
   "description.music.box": "Memainkan muzik kepada haiwan. Gunakan ini untuk menunjukkan kasih sayang kepada haiwan anda.",
   "levelUpMax": "Tahap Maksimum!",
-  "birdieplaza.choresAndRewards": "Anda juga boleh memperoleh {{seasonalTicket}} s dengan kerja mingguan, ganjaran dada harian, Bert's Odd Obsession dan sistem hadiah!",
+  "birdieplaza.choresAndRewards": "Anda juga boleh memperoleh {{chapterTicket}} s dengan kerja mingguan, ganjaran dada harian, Bert's Odd Obsession dan sistem hadiah!",
   "description.community.coin": "(WIP) Syiling bernilai yang dikhaskan untuk kegunaan masa depan di Tanah Sunflower.",
   "bedsMigration.bedsNeededDescription2": "Setiap katil unik boleh tidur satu tangan ladang.",
   "bedsMigration.bedsNeededDescription3": "Letakkan katil untuk menyewa lebih banyak petani ladang!",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "Item dijual",
   "marketplace.congratulationsItemSold": "Tahniah, item anda telah dijual!",
   "withdraw.taxFree": "Goblin mengenakan cukai anda ke atas SFL yang diperoleh dalam permainan. Ini tidak termasuk deposit & pasaran.",
-  "bounties.board.ticketAmount": "Jumlah {{seasonalTicket}} s akan berbeza-beza setiap minggu berdasarkan permintaan.",
+  "bounties.board.ticketAmount": "Jumlah {{chapterTicket}} s akan berbeza-beza setiap minggu berdasarkan permintaan.",
   "marketplace.listing.cancelling": "Membatalkan penyenaraian",
   "marketplace.listing.cancelling.success": "Tahniah, anda telah berjaya membatalkan penyenaraian anda!",
   "marketplace.listing.cancelling.failure": "Oops, ada yang salah. Sila cuba lagi.",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} baki pembelian harian",
   "remaining.free.purchase": "Baki 1 pembelian harian",
   "statements.potionRule.four": "Apabila permainan selesai, skor untuk percubaan terakhir anda akan menentukan ganjaran anda.",
-  "obsessionDialogue.codex": "Adakah itu {{itemName}} yang anda ada? Pergi ke plaza untuk mencari Bert dan tunjukkan kepadanya, dan dia akan memberi anda {{seasonalTicket}} s sebagai balasan.",
+  "obsessionDialogue.codex": "Adakah itu {{itemName}} yang anda ada? Pergi ke plaza untuk mencari Bert dan tunjukkan kepadanya, dan dia akan memberi anda {{chapterTicket}} s sebagai balasan.",
   "bounties.board.travel": "Pergi ke plaza dan cari Poppy untuk memenuhi hadiah ini",
   "description.trade.points": "Diperolehi daripada perdagangan koleksi dan barang pakai di pasaran. Boleh ditukar dengan ganjaran dalam permainan.",
   "reward.collectible": "Koleksi untuk Ladang anda",
