--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -93,7 +93,7 @@
   "birdieplaza.birdieIntro": "Olá, eu sou Birdie, a Bumpkin mais bonita por aqui!",
   "birdieplaza.admiringOutfit": "Notei você admirando meu traje. Não é fantástico?!?",
   "birdieplaza.whatIsSeason": "O que é uma Temporada?",
-  "birdieplaza.newSeasonIntro": "A cada 3 meses, uma nova temporada é introduzida em Sunflower Land.",
+  "birdieplaza.newChapterIntro": "A cada 3 meses, uma nova temporada é introduzida em Sunflower Land.",
   "description.speed.chicken.one": "Seus frangos agora produzirão ovos 10% mais rápido.",
   "description.banana.chicken": "Um frango que impulsiona bananas. Em que mundo vivemos?!",
   "description.lab.grow.pumpkin": "+0,3 Rendimento de Abóbora",
@@ -2302,11 +2302,11 @@
   "beehive.estimatedFull": "Total estimado",
   "beehive.hive.singular": "colmeia",
   "beehive.hives.plural": "colmeias",
-  "birdieplaza.currentSeason": "Atualmente, estamos na temporada {{currentSeason}} e os Bumpkins estão ficando loucos por {{seasonalTicket}} s.",
-  "birdieplaza.collectTickets": "Colete {{seasonalTicket}} s suficientes e você poderá criar NFTs raros. Foi assim que consegui essa roupa rara!",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "Você pode ganhar {{seasonalTicket}} de várias maneiras.",
-  "birdieplaza.gatherAndCraft": "Reúna {{seasonalTicket}} s suficientes e você poderá comprar alguns itens raros, como eu fiz.",
+  "birdieplaza.currentSeason": "Atualmente, estamos na temporada {{currentSeason}} e os Bumpkins estão ficando loucos por {{chapterTicket}} s.",
+  "birdieplaza.collectTickets": "Colete {{chapterTicket}} s suficientes e você poderá criar NFTs raros. Foi assim que consegui essa roupa rara!",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "Você pode ganhar {{chapterTicket}} de várias maneiras.",
+  "birdieplaza.gatherAndCraft": "Reúna {{chapterTicket}} s suficientes e você poderá comprar alguns itens raros, como eu fiz.",
   "description.pharaoh.chicken": "Uma galinha dominante, +1 Dig.",
   "description.knight.chicken": "Um frango forte e nobre que aumenta sua produção de óleo.",
   "description.time.warp.totem": "Velocidade 2x para plantações, árvores, frutas, culinária e minerais. Dura apenas 2 horas",
@@ -2468,7 +2468,7 @@
   "confirmation.sell": "Tem certeza de que quer vender {{amount}} {{name}} por moedas {{coinAmount}}?",
   "confirmation.buyCrops": "Tem certeza de que deseja gastar {{coinAmount}} moedas para comprar {{seedNo}} {{seedName}} s?",
   "confirmation.enterAmount": "Insira o valor a ser vendido:",
-  "confirmation.sellSeasonalArtefact": "Essa recompensa é um artefato sazonal! Tem certeza de que deseja vendê-lo?",
+  "confirmation.sellChapterArtefact": "Essa recompensa é um artefato sazonal! Tem certeza de que deseja vendê-lo?",
   "confirmation.valuableTreasure": "Essa recompensa é muito valiosa! Tem certeza de que deseja vendê-lo?",
   "faction-intro.one": "Bem-vindo à sua nova casa de facções... Precisamos da sua ajuda para nos tornarmos mais poderosos e dominar o reino.",
   "faction-intro.three": "No final de cada semana, prêmios de bônus serão concedidos aos nossos melhores membros. Boa sorte!",
@@ -3008,7 +3008,7 @@
   "npcDialogues.oldSalty.chestUnopened2": "Você tem direito a um presente precioso por dia.",
   "npcDialogues.oldSalty.chestOpened1": "Você abriu o Baú do Pirata hoje!",
   "npcDialogues.oldSalty.chestOpened2": "Volte amanhã para saquear o Baú dos Piratas mais uma vez!",
-  "bert.day": "Você não pode retirar este item por 3 dias após reivindicar {{seasonalTicket}} s.",
+  "bert.day": "Você não pode retirar este item por 3 dias após reivindicar {{chapterTicket}} s.",
   "npcDialogues.peggy.intro1": "Olá, querida! Você veio me trazer algumas delícias deliciosas? Mal posso esperar para ver o que você preparou!",
   "npcDialogues.peggy.intro2": "Bem, passe manteiga nos meus biscoitos! Você tem essas guloseimas saborosas prontas para mim? Estou pronto para uma diversão deliciosa!",
   "npcDialogues.peggy.intro3": "Olá, parceiro! Eu estava esperando para ver a deliciosa criação que você me trouxe. Pronto para compartilhar um pouco da alegria culinária?",
@@ -3103,10 +3103,10 @@
   "npcDialogues.pharaoh.intro1": "Saudações, viajante. Eu sou o Faraó, buscador de relíquias perdidas e conhecimentos esquecidos. Você descobriu algum tesouro antigo?",
   "npcDialogues.pharaoh.intro2": "Bem-vindo, andarilho. As areias do tempo guardam muitos segredos, e eu estou em busca deles. Você encontrou algum artefato em sua jornada?",
   "npcDialogues.pharaoh.intro3": "Salve, explorador. Eu sou o Faraó, guardião de segredos antigos. Você descobriu alguma relíquia que possa ajudar a resolver os mistérios do nosso passado?",
-  "obsessionDialogue.line1": "Ah, o {{itemName}}! Eu só quero vê-la, não possuí-la. Mostre para mim e {{seasonalTicket}} s será sua recompensa.",
-  "obsessionDialogue.line2": "Você trouxe o {{itemName}}? Eu só quero olhar para isso. Deixe-me ver, e {{seasonalTicket}} s será seu.",
-  "obsessionDialogue.line4": "O {{itemName}}! Não quero guardá-la, só contemplá-la. Mostre para mim, e {{seasonalTicket}} s são seus.",
-  "obsessionDialogue.line5": "Você oferece uma visão do {{itemName}}? Tudo o que peço é que o veja brevemente. Por sua generosidade, {{seasonalTicket}} s serão concedidos a você.",
+  "obsessionDialogue.line1": "Ah, o {{itemName}}! Eu só quero vê-la, não possuí-la. Mostre para mim e {{chapterTicket}} s será sua recompensa.",
+  "obsessionDialogue.line2": "Você trouxe o {{itemName}}? Eu só quero olhar para isso. Deixe-me ver, e {{chapterTicket}} s será seu.",
+  "obsessionDialogue.line4": "O {{itemName}}! Não quero guardá-la, só contemplá-la. Mostre para mim, e {{chapterTicket}} s são seus.",
+  "obsessionDialogue.line5": "Você oferece uma visão do {{itemName}}? Tudo o que peço é que o veja brevemente. Por sua generosidade, {{chapterTicket}} s serão concedidos a você.",
   "offer.beginWithNFT": "Para começar, você precisará criar um Farm NFT gratuito. Isso incluirá:",
   "onCollectReward.Missing.Shovel.description": "Expanda sua ilha para encontrá-la.",
   "orderhelp.ticket.deliveries.closed": "As entregas de ingressos estão fechadas no momento",
@@ -3395,8 +3395,8 @@
   "description.faction.mark": "Use-os na Loja de Facções",
   "description.vase": "Um item frágil dos tempos antigos",
   "islandupgrade.warning": "Certifique-se de não ter plantações, frutas, construções, galinhas, carmesim, flores ou mel em andamento. Eles não poderão ser colhidos e serão devolvidos ao seu inventário. Sunstones, House, Market, Fire Pit e Workbench permanecerão colocados em sua terra.",
-  "available.all.season": "Disponível durante toda a temporada",
-  "megastore.message.allSeason": "Aqui estão os itens que estão disponíveis para compra durante toda a temporada. Não deixe de pegá-lo antes do final da temporada!",
+  "available.all.chapter": "Disponível durante toda a temporada",
+  "megastore.message.allChapter": "Aqui estão os itens que estão disponíveis para compra durante toda a temporada. Não deixe de pegá-lo antes do final da temporada!",
   "monthly": "Mensalmente",
   "seasonal": "Sazonal",
   "mega.collectibles": "Mega itens colecionáveis",
@@ -3528,9 +3528,9 @@
   "gems.update": "Atualização de gemas",
   "gems.intro": "Para nos prepararmos para a contratação de novos jogadores, substituímos o Block Bucks por uma nova moeda... Gems!",
   "gems.intro.two": "Você receberá 20 joias por cada Block Buck que possuir.",
-  "birdieplaza.commonMethod": "O método mais comum de ganhar {{seasonalTicket}} s é reunir recursos ou coletar outros itens solicitados e, em seguida, entregá-los ao Bumpkins in the Plaza e a algumas outras áreas.",
-  "birdieplaza.seasonQuests": "Esta temporada tem missões emocionantes, itens colecionáveis raros e dispositivos vestíveis exclusivos que você pode ganhar.",
-  "birdieplaza.craftItems": "Para obter esses itens raros, você deve coletar {{seasonalTicket}} s e trocá-los na Stella's Megastore ou licitar na Casa de Leilões.",
+  "birdieplaza.commonMethod": "O método mais comum de ganhar {{chapterTicket}} s é reunir recursos ou coletar outros itens solicitados e, em seguida, entregá-los ao Bumpkins in the Plaza e a algumas outras áreas.",
+  "birdieplaza.chapterQuests": "Esta temporada tem missões emocionantes, itens colecionáveis raros e dispositivos vestíveis exclusivos que você pode ganhar.",
+  "birdieplaza.craftItems": "Para obter esses itens raros, você deve coletar {{chapterTicket}} s e trocá-los na Stella's Megastore ou licitar na Casa de Leilões.",
   "reward.streak.oneYear": "Recompensa de sequência de 365 dias",
   "chapter.codex.nextDrop.available": "{{dropSupply}} disponível",
   "description.hoot.boost": "+0,5 Trigo, rabanete, couve, arroz, cevada",
@@ -3583,7 +3583,7 @@
   "description.chicken": "Uma fonte confiável de ovos frescos e penas macias, esta galinha faz sua parte alegremente com o cuidado certo.",
   "description.cow": "Esta vaca gentil fornece leite fresco e couro durável. Mantenha-o feliz com muita comida e carinho.",
   "description.sheep": "Esta ovelha fofa fornece lã normal e lã merino luxuosa. Fique feliz para obter os melhores resultados!",
-  "obsessionDialogue.line3": "Esse é o {{itemName}} que você tem? Um simples olhar é tudo o que eu desejo. Para isso, você receberá {{seasonalTicket}} s.",
+  "obsessionDialogue.line3": "Esse é o {{itemName}} que você tem? Um simples olhar é tudo o que eu desejo. Para isso, você receberá {{chapterTicket}} s.",
   "competition.maybeLater": "Talvez mais tarde",
   "world.lvl.requirement": "Nvel {{lvl}}",
   "world.factionMembersOnly": "Somente membros da facção",
@@ -4051,7 +4051,7 @@
   "description.brush": "Escova para animais. Use isso para mostrar afeto aos seus animais.",
   "description.music.box": "Toca música para animais. Use isso para mostrar afeto aos seus animais.",
   "levelUpMax": "Nível máximo!",
-  "birdieplaza.choresAndRewards": "Você também pode ganhar {{seasonalTicket}} s por meio de tarefas semanais, recompensas diárias no baú, Bert's Odd Obsession e sistema de recompensas!",
+  "birdieplaza.choresAndRewards": "Você também pode ganhar {{chapterTicket}} s por meio de tarefas semanais, recompensas diárias no baú, Bert's Odd Obsession e sistema de recompensas!",
   "description.community.coin": "(WIP) Uma moeda valiosa reservada para uso futuro em Sunflower Land.",
   "bedsMigration.bedsNeededDescription2": "Cada cama exclusiva pode acomodar um lavrador.",
   "bedsMigration.bedsNeededDescription3": "Coloque camas para contratar mais fazendeiros!",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "Item vendido",
   "marketplace.congratulationsItemSold": "Parabéns, seu item foi vendido!",
   "withdraw.taxFree": "Os goblins tributam você sobre o SFL obtido no jogo. Isso exclui depósitos e o mercado.",
-  "bounties.board.ticketAmount": "A quantidade de {{seasonalTicket}} s variará a cada semana com base nas solicitações.",
+  "bounties.board.ticketAmount": "A quantidade de {{chapterTicket}} s variará a cada semana com base nas solicitações.",
   "marketplace.listing.cancelling": "Cancelamento do anúncio",
   "marketplace.listing.cancelling.success": "Parabéns, você cancelou seu anúncio com sucesso!",
   "marketplace.listing.cancelling.failure": "Opa, algo deu errado. Por favor, tente novamente.",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} compras diárias restantes",
   "remaining.free.purchase": "1 compra diária restante",
   "statements.potionRule.four": "Quando o jogo terminar, a pontuação da sua última tentativa determinará sua recompensa.",
-  "obsessionDialogue.codex": "Esse é o {{itemName}} que você tem? Vá até a praça para encontrar Bert e mostre a ele, e ele lhe dará {{seasonalTicket}} s em troca.",
+  "obsessionDialogue.codex": "Esse é o {{itemName}} que você tem? Vá até a praça para encontrar Bert e mostre a ele, e ele lhe dará {{chapterTicket}} s em troca.",
   "bounties.board.travel": "Viaje até a praça e encontre Poppy para cumprir essas recompensas",
   "description.trade.points": "Ganhou negociando itens colecionáveis e vestíveis no mercado. Pode ser trocado por recompensas no jogo.",
   "reward.collectible": "Um colecionável para sua fazenda",
