--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -58,7 +58,7 @@
   "auction.winner": "Победитель аукциона!",
   "autumn.seeds": "Осенние семена",
   "available": "Доступно",
-  "available.all.season": "Доступны в течение всего сезона",
+  "available.all.chapter": "Доступны в течение всего сезона",
   "availableSeeds.select": "Семя не выбрано",
   "availableSeeds.select.plant": "Какое семя ты бы хотел выбрать и посадить?",
   "back": "Назад",
@@ -100,7 +100,7 @@
   "beehive.speed": "Скорость",
   "beehive.yield": "Урожай",
   "beetrootBeast.description": "Собрать Свеклу 2,000 раз",
-  "bert.day": "Ты не сможешь вывести этот предмет в течение 3 дней после получения {{seasonalTicket}}",
+  "bert.day": "Ты не сможешь вывести этот предмет в течение 3 дней после получения {{chapterTicket}}",
   "beta": "Бета",
   "betty-intro.headline": "Как развить твою ферму",
   "betty-intro.one": "Привет-привет! Добро пожаловать ко мне на рынок.",
@@ -120,16 +120,16 @@
   "bigSpender.description": "Потратить 10 SFL",
   "birdieplaza.admiringOutfit": "Я заметила, что ты восхищаешься моим нарядом. Ну разве он не великолепен?!",
   "birdieplaza.birdieIntro": "Привет, я - Бёрди, самый красивый бампкин в округе!",
-  "birdieplaza.choresAndRewards": "Вы также можете заработать {{seasonalTicket}} s, выполняя еженедельные задания по дому, ежедневные награды за сундуки, «Странную одержимость Берта» и систему наград!",
-  "birdieplaza.collectTickets": "Собери достаточно {{seasonalTicket}} и ты сможешь купить редкие NFTs. Так у меня и появился этот редкий наряд!",
-  "birdieplaza.commonMethod": "Самый распространенный способ заработать {{seasonalTicket}} s — собирать ресурсы или другие запрашиваемые предметы, а затем доставлять на площадь и в другие районы.",
-  "birdieplaza.craftItems": "Чтобы приобрести эти редкие предметы, вы должны собрать {{seasonalTicket}} и обменять их в Stella's Megastore или участвовать в аукционах.",
-  "birdieplaza.currentSeason": "На данный момент мы в {{currentSeason}} сезоне, и бампкины сходят с ума по {{seasonalTicket}}.",
-  "birdieplaza.earnTicketsVariety": "Ты можешь заработать {{seasonalTicket}} различными способами.",
-  "birdieplaza.gatherAndCraft": "Собери достаточно {{seasonalTicket}} и ты сможешь купить некоторые редкие предметы, как я.",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}}’ы?",
-  "birdieplaza.newSeasonIntro": "Каждые 3 месяца в Sunflower Land начинается новый сезон.",
-  "birdieplaza.seasonQuests": "В этом сезоне вас ждут увлекательные задания, редкие коллекционные предметы и эксклюзивные носимые вещи, которые вы можете заработать.",
+  "birdieplaza.choresAndRewards": "Вы также можете заработать {{chapterTicket}} s, выполняя еженедельные задания по дому, ежедневные награды за сундуки, «Странную одержимость Берта» и систему наград!",
+  "birdieplaza.collectTickets": "Собери достаточно {{chapterTicket}} и ты сможешь купить редкие NFTs. Так у меня и появился этот редкий наряд!",
+  "birdieplaza.commonMethod": "Самый распространенный способ заработать {{chapterTicket}} s — собирать ресурсы или другие запрашиваемые предметы, а затем доставлять на площадь и в другие районы.",
+  "birdieplaza.craftItems": "Чтобы приобрести эти редкие предметы, вы должны собрать {{chapterTicket}} и обменять их в Stella's Megastore или участвовать в аукционах.",
+  "birdieplaza.currentSeason": "На данный момент мы в {{currentSeason}} сезоне, и бампкины сходят с ума по {{chapterTicket}}.",
+  "birdieplaza.earnTicketsVariety": "Ты можешь заработать {{chapterTicket}} различными способами.",
+  "birdieplaza.gatherAndCraft": "Собери достаточно {{chapterTicket}} и ты сможешь купить некоторые редкие предметы, как я.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}}’ы?",
+  "birdieplaza.newChapterIntro": "Каждые 3 месяца в Sunflower Land начинается новый сезон.",
+  "birdieplaza.chapterQuests": "В этом сезоне вас ждут увлекательные задания, редкие коллекционные предметы и эксклюзивные носимые вещи, которые вы можете заработать.",
   "birdieplaza.whatIsSeason": "Что такое сезон?",
   "blacksmith-intro.headline": "Поторапливайся.",
   "blacksmith-intro.one": "Я мастер по крафту инструментов, и с правильными ресурсами я могу сделать все, что ты пожелаешь... включая еще больше инструментов!",
@@ -143,7 +143,7 @@
   "bounties.board": "Доска наград",
   "bounties.board.empty": "На данный момент предложений нет.",
   "bounties.board.info": "Торгуйте наградами на этой неделе до истечения времени.",
-  "bounties.board.ticketAmount": "Сумма {{seasonalTicket}} будет меняться каждую неделю в зависимости от запросов.",
+  "bounties.board.ticketAmount": "Сумма {{chapterTicket}} будет меняться каждую неделю в зависимости от запросов.",
   "bounties.board.travel": "Отправляйтесь на площадь и найдите Поппи, чтобы получить эти награды",
   "bounties.flower.intro.one": "Привет, Бампкин! На этой неделе у нас в подарок цветы.",
   "bounties.flower.intro.two": "Принесите мне свои лучшие цветы, и я сделаю так, чтобы они того стоили.",
@@ -794,7 +794,7 @@
   "confirmation.craft": "Ты уверен, что хочешь создать {{item}}?",
   "confirmation.enterAmount": "Сколько всего продать:",
   "confirmation.sell": "Ты уверен, что хочешь продать {{amount}} {{name}} за {{coinAmount}} монет?",
-  "confirmation.sellSeasonalArtefact": "Это же сезонный артефакт! Ты точно хочешь продать его?",
+  "confirmation.sellChapterArtefact": "Это же сезонный артефакт! Ты точно хочешь продать его?",
   "confirmation.valuableTreasure": "Это сокровище очень ценное! Ты точно хочешь продать его?",
   "congrats": "Поздравляем",
   "connecting": "Подключение",
@@ -3197,7 +3197,7 @@
   "megaStore.timeRemaining": "{{timeRemaining}} осталось!",
   "megaStore.visit": "Посети Мегамагазин в плазе, прежде чем истечет время!",
   "megaStore.wearable": "Отличная покупка! Твоя новая одежда надежно хранится в твоем гардеробе. Оттуда ты можешь надеть его на бампкина.",
-  "megastore.message.allSeason": "Здесь представлены товары, которые можно приобрести в течение всего сезона. Обязательно приобретите их до конца сезона!",
+  "megastore.message.allChapter": "Здесь представлены товары, которые можно приобрести в течение всего сезона. Обязательно приобретите их до конца сезона!",
   "merkl.3rdParty": "Merkl и Quickswap — это децентрализованные сервисы, которыми не управляет Sunflower Land.",
   "merkl.dyor": "Всегда проводите собственное исследование и действуйте на свой страх и риск.",
   "merkl.introducing": "Представляем награды Merkl!",
@@ -3862,12 +3862,12 @@
   "nyonStatue.description": "Легендарный рыцарь, ответственный за очистку шахт от гоблинов. Вскоре после одержанной победы он был отравлен гоблинским заговорщиком. Граждане Sunflower Land воздвигли эту статую в память о его победах.",
   "nyonStatue.memory": "В память о",
   "obsession": "Одержимость",
-  "obsessionDialogue.codex": "Это то {{itemName}}, которое у вас есть? Отправляйтесь на площадь, найдите Берта и покажите его ему, а взамен он даст вам {{seasonalTicket}}.",
-  "obsessionDialogue.line1": "Уф, {{itemName}}! Я хочу только увидеть это, а не обладать. Покажи мне, и {{seasonalTicket}} будет твоей наградой.",
-  "obsessionDialogue.line2": "Ты принес {{itemName}}? Я просто хочу на него посмотреть. Дай мне посмотреть, и {{seasonalTicket}} будут твоими.",
-  "obsessionDialogue.line3": "Это то {{itemName}}, которое у вас есть? Мне нужен только один взгляд. За это вы получите {{seasonalTicket}} s.",
-  "obsessionDialogue.line4": "{{itemName}}! Я не хочу его оставлять, просто чтобы полюбоваться. Покажи его мне, и {{seasonalTicket}} твои.",
-  "obsessionDialogue.line5": "Ты дашь посмотреть {{itemName}}? Все, что я прошу, это взглянуть на него мельком. За твою щедрость тебе будут выписаны {{seasonalTicket}}.",
+  "obsessionDialogue.codex": "Это то {{itemName}}, которое у вас есть? Отправляйтесь на площадь, найдите Берта и покажите его ему, а взамен он даст вам {{chapterTicket}}.",
+  "obsessionDialogue.line1": "Уф, {{itemName}}! Я хочу только увидеть это, а не обладать. Покажи мне, и {{chapterTicket}} будет твоей наградой.",
+  "obsessionDialogue.line2": "Ты принес {{itemName}}? Я просто хочу на него посмотреть. Дай мне посмотреть, и {{chapterTicket}} будут твоими.",
+  "obsessionDialogue.line3": "Это то {{itemName}}, которое у вас есть? Мне нужен только один взгляд. За это вы получите {{chapterTicket}} s.",
+  "obsessionDialogue.line4": "{{itemName}}! Я не хочу его оставлять, просто чтобы полюбоваться. Покажи его мне, и {{chapterTicket}} твои.",
+  "obsessionDialogue.line5": "Ты дашь посмотреть {{itemName}}? Все, что я прошу, это взглянуть на него мельком. За твою щедрость тебе будут выписаны {{chapterTicket}}.",
   "ocean.fishing": "Рыбалка в океане",
   "off": "Выключено",
   "offer.beginWithNFT": "Для начала тебе нужно будет создать бесплатный Farm NFT. Это будет включать:",
