--- a/src/lib/i18n/dictionaries/tr.json
+++ b/src/lib/i18n/dictionaries/tr.json
@@ -106,7 +106,7 @@
   "birdieplaza.birdieIntro": "Merhaba ben Birdie, çevredeki en güzel Bumpkin’im!",
   "birdieplaza.admiringOutfit": "Kıyafetime hayran olduğunu fark ettim. Harika değil mi?!?",
   "birdieplaza.whatIsSeason": "Sezon nedir?",
-  "birdieplaza.newSeasonIntro": "Sunflower Land’de her 3 ayda bir yeni sezon tanıtılıyor.",
+  "birdieplaza.newChapterIntro": "Sunflower Land’de her 3 ayda bir yeni sezon tanıtılıyor.",
   "description.speed.chicken.one": "Artık tavukların 10% daha hızlı yumurta üretecek.",
   "description.banana.chicken": "Muzları artıran bir tavuk. Nasıl bir dünyada yaşıyoruz.",
   "description.lab.grow.pumpkin": "+0.3 Kabak Verimi",
@@ -2350,11 +2350,11 @@
   "beehive.estimatedFull": "Tahmini dolu",
   "beehive.hive.singular": "kovan",
   "beehive.hives.plural": "kovanlar",
-  "birdieplaza.currentSeason": "Şu anda {{currentSeason}} Sezonundayız ve Bumpkins {{seasonalTicket}} s için çıldırıyor.",
-  "birdieplaza.collectTickets": "Yeterince {{seasonalTicket}} s toplayın ve nadir NFT'ler oluşturabilirsiniz. Bu nadir kıyafeti böyle aldım!",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "{{seasonalTicket}} çeşitli şekillerde kazanabilirsiniz.",
-  "birdieplaza.gatherAndCraft": "Yeterince {{seasonalTicket}} s toplayın ve benim yaptığım gibi bazı nadir eşyaları satın alabileceksiniz.",
+  "birdieplaza.currentSeason": "Şu anda {{currentSeason}} Sezonundayız ve Bumpkins {{chapterTicket}} s için çıldırıyor.",
+  "birdieplaza.collectTickets": "Yeterince {{chapterTicket}} s toplayın ve nadir NFT'ler oluşturabilirsiniz. Bu nadir kıyafeti böyle aldım!",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "{{chapterTicket}} çeşitli şekillerde kazanabilirsiniz.",
+  "birdieplaza.gatherAndCraft": "Yeterince {{chapterTicket}} s toplayın ve benim yaptığım gibi bazı nadir eşyaları satın alabileceksiniz.",
   "description.pharaoh.chicken": "Yönetici bir tavuk, +1 Dig.",
   "description.knight.chicken": "Yağ veriminizi artıran güçlü ve asil bir tavuk.",
   "description.time.warp.totem": "Mahsuller, ağaçlar, meyveler, yemek pişirme ve mineraller için 2x hız. Sadece 2 saat sürer",
@@ -2500,7 +2500,7 @@
   "confirmation.sell": "{{coinAmount}} Coins karşılığında {{amount}} {{name}} satmak istediğinizden emin misiniz?",
   "confirmation.buyCrops": "{{seedNo}} {{seedName}} s satın almak için {{coinAmount}} Coin harcamak istediğinizden emin misiniz?",
   "confirmation.enterAmount": "Satılacak Miktarı Girin:",
-  "confirmation.sellSeasonalArtefact": "Bu ödül mevsimsel bir eserdir! Satmak istediğinden emin misin?",
+  "confirmation.sellChapterArtefact": "Bu ödül mevsimsel bir eserdir! Satmak istediğinden emin misin?",
   "confirmation.valuableTreasure": "Bu ödül çok değerli! Satmak istediğinden emin misin?",
   "faction-intro.one": "Yeni hizip evinize hoş geldiniz... Daha güçlü olmak ve krallığa hükmetmek için yardımınıza ihtiyacımız var.",
   "faction-intro.three": "Her haftanın sonunda, en iyi üyelerimize bonus ödüller verilecektir. İyi şanslar!",
@@ -3033,7 +3033,7 @@
   "npcDialogues.oldSalty.chestUnopened2": "Günde bir hazine hediyesi almaya hakkınız var.",
   "npcDialogues.oldSalty.chestOpened1": "Bugün Korsan Sandığını açtın!",
   "npcDialogues.oldSalty.chestOpened2": "Korsan Sandığını bir kez daha yağmalamak için yarın geri dön!",
-  "bert.day": "Bu öğeyi {{seasonalTicket}} s talep ettikten sonra 3 gün boyunca geri çekemezsiniz.",
+  "bert.day": "Bu öğeyi {{chapterTicket}} s talep ettikten sonra 3 gün boyunca geri çekemezsiniz.",
   "npcDialogues.peggy.intro1": "Merhaba sevgilim! Bana nefis lezzetler getirmeye mi geldin? Ne pişirdiğini görmek için sabırsızlanıyorum!",
   "npcDialogues.peggy.intro2": "Pekala, bisküvilerimi yağlayın! Benim için o lezzetli ikramları hazırladın mı? Lezzetli eğlenceye hazırım!",
   "npcDialogues.peggy.intro3": "Selamlar, ortak! Bana ne kadar lezzetli bir yaratım getirdiğini görmek için bekliyordum. Biraz mutfak sevinci paylaşmaya hazır mısınız?",
@@ -3128,10 +3128,10 @@
   "npcDialogues.pharaoh.intro1": "Selamlar gezgin. Ben Firavun'um, kayıp kalıntıları ve unutulmuş bilgiyi arayan. Eski hazineleri keşfettin mi?",
   "npcDialogues.pharaoh.intro2": "Hoş geldin, gezgin. Zamanın kumları birçok sır barındırıyor ve ben onları arıyorum. Yolculuğunuzda herhangi bir eser buldunuz mu?",
   "npcDialogues.pharaoh.intro3": "Selamlar kaşif. Ben Firavun'um, eski sırların koruyucusuyum. Geçmişimizin gizemlerini çözmede yardımcı olabilecek herhangi bir kalıntı keşfettin mi?",
-  "obsessionDialogue.line1": "Ah, {{itemName}}! Sadece görmek istiyorum, sahip olmak değil. Bana göster ve {{seasonalTicket}} s senin ödülün olacak.",
-  "obsessionDialogue.line2": "{{itemName}} getirdin mi? Sadece ona bakmak istiyorum. Bakayım, ve {{seasonalTicket}} s senin olacak.",
-  "obsessionDialogue.line4": "{{itemName}}! Onu saklamak istemiyorum, sadece görmek için. Bana göster ve {{seasonalTicket}} s senindir.",
-  "obsessionDialogue.line5": "{{itemName}} 'nin bir görünümünü sunuyorsunuz? Tek istediğim kısaca görmek. Cömertliğiniz için size {{seasonalTicket}} s verilecektir.",
+  "obsessionDialogue.line1": "Ah, {{itemName}}! Sadece görmek istiyorum, sahip olmak değil. Bana göster ve {{chapterTicket}} s senin ödülün olacak.",
+  "obsessionDialogue.line2": "{{itemName}} getirdin mi? Sadece ona bakmak istiyorum. Bakayım, ve {{chapterTicket}} s senin olacak.",
+  "obsessionDialogue.line4": "{{itemName}}! Onu saklamak istemiyorum, sadece görmek için. Bana göster ve {{chapterTicket}} s senindir.",
+  "obsessionDialogue.line5": "{{itemName}} 'nin bir görünümünü sunuyorsunuz? Tek istediğim kısaca görmek. Cömertliğiniz için size {{chapterTicket}} s verilecektir.",
   "offer.beginWithNFT": "Başlamak için ücretsiz bir Farm NFT basmanız gerekecek. Bu şunları içerecektir:",
   "orderhelp.ticket.deliveries.closed": "Bilet teslimatları şu anda kapalı",
   "portal.example.claimPrize": "Ödülünü al!",
@@ -3395,8 +3395,8 @@
   "description.faction.mark": "Bunları Faction Shop'ta kullanın",
   "description.vase": "Antik çağlardan kalma kırılgan bir eşya",
   "islandupgrade.warning": "Devamında herhangi bir mahsul, meyve, bina, tavuk, kıpkırmızı taş, çiçek veya bal olmadığından emin olun. Bunlar hasat edilemeyecek ve envanterinize iade edilecektir. Güneş taşları, Ev, Pazar, Ateş Çukuru ve Tezgah arazinizde yerleştirilmiş kalacaktır.",
-  "available.all.season": "Tüm sezon kullanılabilir",
-  "megastore.message.allSeason": "İşte tüm sezon boyunca satın alınabilecek ürünler. Sezon bitiminden önce aldığınızdan emin olun!",
+  "available.all.chapter": "Tüm sezon kullanılabilir",
+  "megastore.message.allChapter": "İşte tüm sezon boyunca satın alınabilecek ürünler. Sezon bitiminden önce aldığınızdan emin olun!",
   "monthly": "Aylık",
   "seasonal": "Mevsimsel",
   "mega.collectibles": "Mega Koleksiyonlar",
@@ -3528,9 +3528,9 @@
   "gems.update": "Mücevher güncellemesi",
   "gems.intro": "Yeni oyunculara katılmaya hazırlanmak için Block Bucks'ı yeni bir para birimi ile değiştirdik... Gems!",
   "gems.intro.two": "Sahip olduğunuz her Blok Buck için 20 Mücevher alacaksınız.",
-  "birdieplaza.commonMethod": "{{seasonalTicket}} s kazanmanın en yaygın yöntemi, kaynakları toplamak veya istenen diğer öğeleri toplamak ve ardından bunları Plaza'daki Bumpkins'e ve diğer bazı bölgelere teslim etmektir.",
-  "birdieplaza.seasonQuests": "Bu sezon heyecan verici görevler, nadir koleksiyonlar ve kazanabileceğiniz özel giyilebilir ürünler var.",
-  "birdieplaza.craftItems": "Bu nadir eşyaları elde etmek için {{seasonalTicket}} s toplamanız ve bunları Stella's Megastore'da değiştirmeniz veya Müzayede Evi'nde teklif vermeniz gerekir.",
+  "birdieplaza.commonMethod": "{{chapterTicket}} s kazanmanın en yaygın yöntemi, kaynakları toplamak veya istenen diğer öğeleri toplamak ve ardından bunları Plaza'daki Bumpkins'e ve diğer bazı bölgelere teslim etmektir.",
+  "birdieplaza.chapterQuests": "Bu sezon heyecan verici görevler, nadir koleksiyonlar ve kazanabileceğiniz özel giyilebilir ürünler var.",
+  "birdieplaza.craftItems": "Bu nadir eşyaları elde etmek için {{chapterTicket}} s toplamanız ve bunları Stella's Megastore'da değiştirmeniz veya Müzayede Evi'nde teklif vermeniz gerekir.",
   "reward.streak.oneYear": "365 gün seri ödülü",
   "chapter.codex.nextDrop.available": "{{dropSupply}} mevcut",
   "description.hoot.boost": "+0.5 Buğday, Turp, Lahana, Pirinç, Arpa",
@@ -3583,7 +3583,7 @@
   "description.chicken": "Güvenilir bir taze yumurta ve yumuşak tüy kaynağı olan bu tavuk, doğru bakımla görevini mutlu bir şekilde yapıyor.",
   "description.cow": "Bu nazik inek taze süt ve dayanıklı deri sağlar. Bol miktarda yiyecek ve sevgi ile mutlu edin.",
   "description.sheep": "Bu kabarık koyun hem normal yün hem de lüks merinos yünü sağlar. En yumuşak sonuçlar için mutlu olun!",
-  "obsessionDialogue.line3": "Sahip olduğunuz {{itemName}} bu mu? Tek istediğim sadece bir bakış. Bunun için {{seasonalTicket}} s alacaksınız.",
+  "obsessionDialogue.line3": "Sahip olduğunuz {{itemName}} bu mu? Tek istediğim sadece bir bakış. Bunun için {{chapterTicket}} s alacaksınız.",
   "competition.maybeLater": "Belki daha sonra",
   "world.lvl.requirement": "Lvl {{lvl}}",
   "world.factionMembersOnly": "Sadece grup üyeleri",
@@ -4051,7 +4051,7 @@
   "description.brush": "Hayvan Fırçası. Bunu hayvanlarınıza şefkat göstermek için kullanın.",
   "description.music.box": "Hayvanlara müzik çalar. Bunu hayvanlarınıza şefkat göstermek için kullanın.",
   "levelUpMax": "Maksimum Seviye!",
-  "birdieplaza.choresAndRewards": "Ayrıca haftalık ev işleri, günlük sandık ödülleri, Bert'in Garip Takıntısı ve ödül sistemi ile {{seasonalTicket}} s kazanabilirsiniz!",
+  "birdieplaza.choresAndRewards": "Ayrıca haftalık ev işleri, günlük sandık ödülleri, Bert'in Garip Takıntısı ve ödül sistemi ile {{chapterTicket}} s kazanabilirsiniz!",
   "description.community.coin": "(WIP) Ayçiçeği Ülkesinde gelecekte kullanılmak üzere ayrılmış değerli bir madeni para.",
   "bedsMigration.bedsNeededDescription2": "Her benzersiz yatak bir çiftlik elini uyuyabilir.",
   "bedsMigration.bedsNeededDescription3": "Daha fazla çiftçi kiralamak için yatak yerleştirin!",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "Ürün satıldı",
   "marketplace.congratulationsItemSold": "Tebrikler, öğeniz satıldı!",
   "withdraw.taxFree": "Goblinler oyun içinde kazanılan SFL üzerinden sizi vergi alır. Bu, mevduat ve pazarı hariç tutar.",
-  "bounties.board.ticketAmount": "{{seasonalTicket}} s miktarı isteklere göre her hafta değişecektir.",
+  "bounties.board.ticketAmount": "{{chapterTicket}} s miktarı isteklere göre her hafta değişecektir.",
   "marketplace.listing.cancelling": "Kaydı iptal etme",
   "marketplace.listing.cancelling.success": "Tebrikler, kaydınızı başarıyla iptal ettiniz!",
   "marketplace.listing.cancelling.failure": "Hata, bir şeyler ters gitti. Lütfen tekrar deneyin.",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} kalan günlük alımlar",
   "remaining.free.purchase": "Günlük 1 satın alma kaldı",
   "statements.potionRule.four": "Oyun tamamlandığında, son denemenizin puanı ödülünüzü belirleyecektir.",
-  "obsessionDialogue.codex": "Sahip olduğunuz {{itemName}} bu mu? Bert'i bulmak için plazaya gidin ve ona gösterin, karşılığında size {{seasonalTicket}} s verecektir.",
+  "obsessionDialogue.codex": "Sahip olduğunuz {{itemName}} bu mu? Bert'i bulmak için plazaya gidin ve ona gösterin, karşılığında size {{chapterTicket}} s verecektir.",
   "bounties.board.travel": "Plazaya gidin ve bu ödülleri yerine getirmek için Poppy'yi bulun",
   "description.trade.points": "Piyasada koleksiyon ve giyilebilir eşya ticaretinden kazanıldı. Oyun içi ödüller ile değiştirilebilir.",
   "reward.collectible": "Çiftliğiniz için bir koleksiyon",
