--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -121,13 +121,13 @@
   "beehive.hives.plural": "蜂箱",
   "birdieplaza.birdieIntro": "嘿，我是 Birdie，这儿最美的乡包佬！",
   "birdieplaza.admiringOutfit": "我看你是在欣赏我的衣服。漂亮坏了，是吧？！？",
-  "birdieplaza.currentSeason": "我们目前正处于 {{currentSeason}} 季节，乡包佬们对 {{seasonalTicket}} 疯狂不已。",
-  "birdieplaza.collectTickets": "收集足够的 {{seasonalTicket}} 即可锻造稀有 NFT。这就是我获得这套稀有服装的方法！",
+  "birdieplaza.currentSeason": "我们目前正处于 {{currentSeason}} 季节，乡包佬们对 {{chapterTicket}} 疯狂不已。",
+  "birdieplaza.collectTickets": "收集足够的 {{chapterTicket}} 即可锻造稀有 NFT。这就是我获得这套稀有服装的方法！",
   "birdieplaza.whatIsSeason": "什么是时季？",
   "birdieplaza.howToEarnTickets": "我怎样赚取",
-  "birdieplaza.earnTicketsVariety": "您可以通过多种方式赚取 {{seasonalTicket}}。",
-  "birdieplaza.gatherAndCraft": "收集足够的 {{seasonalTicket}} 你就可以像我一样购买一些稀有物品。",
-  "birdieplaza.newSeasonIntro": "Sunflower Land 每 3 个月会迎来一个新的时季。",
+  "birdieplaza.earnTicketsVariety": "您可以通过多种方式赚取 {{chapterTicket}}。",
+  "birdieplaza.gatherAndCraft": "收集足够的 {{chapterTicket}} 你就可以像我一样购买一些稀有物品。",
+  "birdieplaza.newChapterIntro": "Sunflower Land 每 3 个月会迎来一个新的时季。",
   "description.speed.chicken.one": "你的鸡产蛋速度会加快 10%。",
   "description.banana.chicken": "一只能让香蕉增加产量的鸡。我们这世界可真奇妙。",
   "description.lab.grow.pumpkin": "+0.3 南瓜产量",
@@ -531,7 +531,7 @@
   "confirmation.sell": "您确定要卖掉 {{amount}} {{name}} 以换取 {{coinAmount}} 枚硬币吗？",
   "confirmation.buyCrops": "您确定要花 {{coinAmount}} 枚硬币购买 {{seedNo}} {{seedName}}s 吗？",
   "confirmation.enterAmount": "请输入出售数量：",
-  "confirmation.sellSeasonalArtefact": "这悬赏的是一种时季古董！您确定您想卖出它吗？",
+  "confirmation.sellChapterArtefact": "这悬赏的是一种时季古董！您确定您想卖出它吗？",
   "confirmation.valuableTreasure": "这悬赏非常珍贵！您确定您想卖出它吗？",
   "confirm.skillClaim": "您确定要领取该技能吗？",
   "faction-intro.one": "欢迎来到您的新帮派堡楼……我们需要您的援助好变得更加强大并君临王城。",
@@ -2681,7 +2681,7 @@
   "npcDialogues.bert.intro2": "啊，同道之人！Sunflorea 埋藏着无数宝贝……",
   "npcDialogues.bert.intro3": "致敬，秘法卫士！在 Sunflorea ，有些物品需要递送……",
   "npcDialogues.bert.intro4": "你好，秘密的追索者！Sunflorea 的附魔可以分为两类……",
-  "bert.day": "在申领 {{seasonalTicket}} 后的 3 天内，您都无法提取此物品。",
+  "bert.day": "在申领 {{chapterTicket}} 后的 3 天内，您都无法提取此物品。",
   "npcDialogues.bert.positiveDelivery1": "不可思议！你给我带来了我需要的一切……",
   "npcDialogues.bert.positiveDelivery2": "哦，迷人的发现！你恰好给我带来了我想要的东西……",
   "npcDialogues.bert.positiveDelivery3": "啊，是时候了！你已经找到了我正好想要的物品。太棒了！",
@@ -2903,10 +2903,10 @@
   "plaza.magicButton.query": "广场上出现了一个神奇的按钮。你想按下吗？",
   "nyonStatue.memory": "谨此纪念",
   "nyonStatue.description": "负责从地雷间清除地精的传奇骑士。获胜后不久，他便死于哥布林阴谋家的毒害。向日葵公民用他的盔甲竖起了这座雕像，以纪念他的凯旋。",
-  "obsessionDialogue.line1": "啊，{{itemName}}！我只是想看到它，不想拥有。给我看，{{seasonalTicket}} 就将是你的奖励。",
-  "obsessionDialogue.line2": "你带来 {{itemName}} 了吗？我只想盯它几眼。让我看看，{{seasonalTicket}} 都归你的。",
-  "obsessionDialogue.line4": "{{itemName}}!我没想要它，只是想要看看。给我看，{{seasonalTicket}} 就归你的。",
-  "obsessionDialogue.line5": "你能给我看 {{itemName}} ？我只想简单地看一看。作为您慷慨解囊的回报，我会给您发放 {{seasonalTicket}} 。",
+  "obsessionDialogue.line1": "啊，{{itemName}}！我只是想看到它，不想拥有。给我看，{{chapterTicket}} 就将是你的奖励。",
+  "obsessionDialogue.line2": "你带来 {{itemName}} 了吗？我只想盯它几眼。让我看看，{{chapterTicket}} 都归你的。",
+  "obsessionDialogue.line4": "{{itemName}}!我没想要它，只是想要看看。给我看，{{chapterTicket}} 就归你的。",
+  "obsessionDialogue.line5": "你能给我看 {{itemName}} ？我只想简单地看一看。作为您慷慨解囊的回报，我会给您发放 {{chapterTicket}} 。",
   "offer.okxOffer": "哈喽喂，农夫，我有 OKX 独家优惠要给你！",
   "offer.beginWithNFT": "首先，你要铸造一个免费农场 NFT。这将包括：",
   "offer.getStarterPack": "立即获取新手包",
@@ -3395,8 +3395,8 @@
   "description.faction.mark": "在帮派商城里使用",
   "description.vase": "远古时代的易碎品",
   "islandupgrade.warning": "确保您没有任何庄稼、水果、建筑、鸡、猩红宝石、鲜花或蜂蜜在生产中。这些资源节点将无法收获并将退回您的库存。日光石、房屋、市场、火坑和工作台将保留在您的土地上。",
-  "available.all.season": "全时季可用",
-  "megastore.message.allSeason": "以下是整个时季都可以购买的物品。一定要在时季结束前拿到手！",
+  "available.all.chapter": "全时季可用",
+  "megastore.message.allChapter": "以下是整个时季都可以购买的物品。一定要在时季结束前拿到手！",
   "monthly": "每月",
   "seasonal": "时季",
   "mega.collectibles": "超星收藏品",
@@ -3528,9 +3528,9 @@
   "gems.update": "宝石更新",
   "gems.intro": "为了准备引入新玩家，我们已经用一种新货币……宝石取代了 Block Bucks！",
   "gems.intro.two": "您每拥有一个 Block Bucks，都将获得 20 颗宝石。",
-  "birdieplaza.commonMethod": "赚取 {{seasonalTicket}} 最常见方法是收集资源或收集其他所需物品，然后将其送货交付给广场和其他区域的乡包佬。",
-  "birdieplaza.seasonQuests": "本时季有激动人心的任务、稀有收藏品和独家穿戴品供您赚取。",
-  "birdieplaza.craftItems": "要获得这些稀有物品，您必须收集 {{seasonalTicket}} 并在 Stella 的超星商店兑换或在拍卖行竞拍。",
+  "birdieplaza.commonMethod": "赚取 {{chapterTicket}} 最常见方法是收集资源或收集其他所需物品，然后将其送货交付给广场和其他区域的乡包佬。",
+  "birdieplaza.chapterQuests": "本时季有激动人心的任务、稀有收藏品和独家穿戴品供您赚取。",
+  "birdieplaza.craftItems": "要获得这些稀有物品，您必须收集 {{chapterTicket}} 并在 Stella 的超星商店兑换或在拍卖行竞拍。",
   "reward.streak.oneYear": "365 天连续奖励",
   "chapter.codex.nextDrop.available": "{{dropSupply}} 可用",
   "description.hoot.boost": "+0.5 小麦、萝卜、羽衣甘蓝、大米、大麦等高阶庄稼",
@@ -3583,7 +3583,7 @@
   "description.chicken": "这只鸡是新鲜鸡蛋和柔软羽毛的可靠来源，只要小心谨慎，它就会愉快地发挥自己的作用。",
   "description.cow": "这头温柔的奶牛提供新鲜的牛奶和耐用的皮革。用充足的食物和抚慰让它开心。",
   "description.sheep": "这只毛茸茸的绵羊既提供普通羊毛，又提供奢华的美利奴羊毛。保持高兴，以获得最绵软的产出！",
-  "obsessionDialogue.line3": "你那是 {{itemName}} 吗？我只想看上一眼。看上了，我就给您 {{seasonalTicket}} 。",
+  "obsessionDialogue.line3": "你那是 {{itemName}} 吗？我只想看上一眼。看上了，我就给您 {{chapterTicket}} 。",
   "competition.maybeLater": "也许以后再说",
   "world.lvl.requirement": "等级 {{lvl}}",
   "world.factionMembersOnly": "仅限帮派成员",
@@ -4051,7 +4051,7 @@
   "description.brush": "动物毛刷。用来表达对动物的爱意。",
   "description.music.box": "给动物播放音乐。用来表达对动物的爱意。",
   "levelUpMax": "最高等级！",
-  "birdieplaza.choresAndRewards": "您还可以通过每周农活、每日宝箱奖励、Bert 的奇妙痴玩和赏金系统获得 {{seasonalTicket}} ！",
+  "birdieplaza.choresAndRewards": "您还可以通过每周农活、每日宝箱奖励、Bert 的奇妙痴玩和赏金系统获得 {{chapterTicket}} ！",
   "description.community.coin": "(WIP) 一枚高价值的硬币，留待将来在 Sunflower Land 使用。",
   "bedsMigration.bedsNeededDescription2": "每张床都可以单独给一个雇农睡觉。",
   "bedsMigration.bedsNeededDescription3": "放置床位以雇用更多的雇农！",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "物品已售出",
   "marketplace.congratulationsItemSold": "恭喜，您的物品已售出！",
   "withdraw.taxFree": "哥布林会根据游戏中获得的 SFL 向你征税。这不包括存款和市场。",
-  "bounties.board.ticketAmount": "{{seasonalTicket}} 的金额每周将根据请求而有所不同。",
+  "bounties.board.ticketAmount": "{{chapterTicket}} 的金额每周将根据请求而有所不同。",
   "marketplace.listing.cancelling": "取消清单",
   "marketplace.listing.cancelling.success": "恭喜，您已成功取消挂单！",
   "marketplace.listing.cancelling.failure": "哎呀，出了点问题。请重试。",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "剩余每日购单数：{{purchasesRemaining}}",
   "remaining.free.purchase": "剩余每日购单数：1",
   "statements.potionRule.four": "游戏完成后，你最后一次尝试的分数将决定你的奖励。",
-  "obsessionDialogue.codex": "那是你的 {{itemName}} 吗？前往广场找到 Bert 并将其展示给他，他会给你 {{seasonalTicket}} 作为回报。",
+  "obsessionDialogue.codex": "那是你的 {{itemName}} 吗？前往广场找到 Bert 并将其展示给他，他会给你 {{chapterTicket}} 作为回报。",
   "bounties.board.travel": "前往广场找到 Poppy 来兑现这些赏金",
   "description.trade.points": "通过在市场上交易收藏品和可穿戴设备获得。可以兑换游戏内奖励。",
   "reward.collectible": "为您农场准备的收藏品",
