--- a/src/lib/i18n/dictionaries/de.json
+++ b/src/lib/i18n/dictionaries/de.json
@@ -123,13 +123,13 @@
   "beehive.hives.plural": "Bienenstöcke",
   "birdieplaza.birdieIntro": "Hallo, ich bin Birdie, der schönste Bumpkin, den es gibt!",
   "birdieplaza.admiringOutfit": "Mir ist aufgefallen, dass du mein Outfit bewunderst. Ist es nicht fantastisch?!?",
-  "birdieplaza.currentSeason": "Wir sind gerade in der {{currentSeason}} -Saison und Bumpkins sind verrückt nach {{seasonalTicket}} s.",
-  "birdieplaza.collectTickets": "Sammle genug {{seasonalTicket}} s und du kannst seltene NFTs herstellen. So habe ich dieses seltene Outfit bekommen!",
+  "birdieplaza.currentSeason": "Wir sind gerade in der {{currentSeason}} -Saison und Bumpkins sind verrückt nach {{chapterTicket}} s.",
+  "birdieplaza.collectTickets": "Sammle genug {{chapterTicket}} s und du kannst seltene NFTs herstellen. So habe ich dieses seltene Outfit bekommen!",
   "birdieplaza.whatIsSeason": "Was ist eine Jahreszeit?",
-  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "Du kannst auf verschiedene Arten {{seasonalTicket}} verdienen.",
-  "birdieplaza.gatherAndCraft": "Sammelt genug {{seasonalTicket}} s und ihr werdet seltene Gegenstände kaufen können, so wie ich es getan habe.",
-  "birdieplaza.newSeasonIntro": "Alle 3 Monate wird im Sunflower Land eine neue Saison eingeführt.",
+  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "Du kannst auf verschiedene Arten {{chapterTicket}} verdienen.",
+  "birdieplaza.gatherAndCraft": "Sammelt genug {{chapterTicket}} s und ihr werdet seltene Gegenstände kaufen können, so wie ich es getan habe.",
+  "birdieplaza.newChapterIntro": "Alle 3 Monate wird im Sunflower Land eine neue Saison eingeführt.",
   "description.speed.chicken.one": "Ihre Hühner produzieren jetzt 10% schneller Eier.",
   "description.banana.chicken": "Ein Huhn, das Bananen stärkt. In was für einer Welt leben wir.",
   "description.pharaoh.chicken": "Ein herrschendes Huhn, +1 Dig.",
@@ -558,7 +558,7 @@
   "confirmation.sell": "Bist du sicher, dass du {{amount}} {{name}} für {{coinAmount}} Coins verkaufen willst?",
   "confirmation.buyCrops": "Bist du sicher, dass du {{coinAmount}} Coins ausgeben möchtest, um {{seedNo}} {{seedName}} s zu kaufen?",
   "confirmation.enterAmount": "Geben Sie den zu verkaufenden Betrag ein:",
-  "confirmation.sellSeasonalArtefact": "Dieses Kopfgeld ist ein saisonales Artefakt! Bist du sicher, dass du es verkaufen willst?",
+  "confirmation.sellChapterArtefact": "Dieses Kopfgeld ist ein saisonales Artefakt! Bist du sicher, dass du es verkaufen willst?",
   "confirmation.valuableTreasure": "Dieses Kopfgeld ist sehr wertvoll! Bist du sicher, dass du es verkaufen willst?",
   "confirm.skillClaim": "Bist du sicher, dass du die Fähigkeit beanspruchen willst?",
   "faction-intro.one": "Willkommen in deinem neuen Fraktionshaus... Wir brauchen deine Hilfe, um mächtiger zu werden und das Königreich zu dominieren.",
@@ -2514,7 +2514,7 @@
   "npcDialogues.bert.intro2": "Ah, Gleichgesinnte! Sunflorea beherbergt unzählige Schätze...",
   "npcDialogues.bert.intro3": "Seid gegrüßt, Träger des Geheimnisvollen! In Sunflorea verlangen einige Artikel eine Lieferung...",
   "npcDialogues.bert.intro4": "Hallo, Sucher des Verborgenen! Sunfloreas Verzauberungen lassen sich in zwei Kategorien einteilen...",
-  "bert.day": "Du kannst diesen Artikel 3 Tage lang nicht zurücknehmen, nachdem du {{seasonalTicket}} s eingelöst hast.",
+  "bert.day": "Du kannst diesen Artikel 3 Tage lang nicht zurücknehmen, nachdem du {{chapterTicket}} s eingelöst hast.",
   "npcDialogues.bert.positiveDelivery1": "Unglaublich! Du hast mir alles gebracht, was ich brauche...",
   "npcDialogues.bert.positiveDelivery2": "Oh, faszinierender Fund! Sie haben mir genau die Artikel gebracht, die ich gesucht habe...",
   "npcDialogues.bert.positiveDelivery3": "Ah, wird langsam Zeit! Ihr habt genau die Gegenstände erworben, die ich gesucht habe. Hervorragend!",
@@ -2736,10 +2736,10 @@
   "plaza.magicButton.query": "Auf dem Platz ist ein magischer Knopf aufgetaucht. Willst du ihn drücken?",
   "nyonStatue.memory": "In Erinnerung an",
   "nyonStatue.description": "Der legendäre Ritter, der dafür verantwortlich ist, die Kobolde aus den Minen zu vertreiben. Kurz nach seinem Sieg starb er an einer Vergiftung durch einen Goblin-Verschwörer. Die Sunflower Citizens errichteten diese Statue mit seiner Rüstung zum Gedenken an seine Eroberungen.",
-  "obsessionDialogue.line1": "Ah, das {{itemName}}! Ich möchte es nur sehen, nicht besitzen. Zeig es mir und {{seasonalTicket}} s wird deine Belohnung sein.",
-  "obsessionDialogue.line2": "Du hast das {{itemName}} mitgebracht? Ich will es mir nur ansehen. Lass mich sehen, und {{seasonalTicket}} s werden dir gehören.",
-  "obsessionDialogue.line4": "Das {{itemName}}! Ich will es nicht behalten, nur um es mir anzusehen. Zeig es mir und {{seasonalTicket}} s gehören dir.",
-  "obsessionDialogue.line5": "Sie bieten einen Blick auf die {{itemName}}? Ich bitte nur darum, es mir kurz anzusehen. Für Ihre Großzügigkeit werden Ihnen {{seasonalTicket}} s gewährt.",
+  "obsessionDialogue.line1": "Ah, das {{itemName}}! Ich möchte es nur sehen, nicht besitzen. Zeig es mir und {{chapterTicket}} s wird deine Belohnung sein.",
+  "obsessionDialogue.line2": "Du hast das {{itemName}} mitgebracht? Ich will es mir nur ansehen. Lass mich sehen, und {{chapterTicket}} s werden dir gehören.",
+  "obsessionDialogue.line4": "Das {{itemName}}! Ich will es nicht behalten, nur um es mir anzusehen. Zeig es mir und {{chapterTicket}} s gehören dir.",
+  "obsessionDialogue.line5": "Sie bieten einen Blick auf die {{itemName}}? Ich bitte nur darum, es mir kurz anzusehen. Für Ihre Großzügigkeit werden Ihnen {{chapterTicket}} s gewährt.",
   "offer.okxOffer": "Hallo Farmer, ich habe ein exklusives OKX-Angebot für dich!",
   "offer.beginWithNFT": "Zu Beginn musst du ein kostenloses Farm NFT minten. Dies beinhaltet:",
   "offer.getStarterPack": "Holen Sie sich jetzt das Starter Pack",
@@ -3417,8 +3417,8 @@
   "description.gold.beetle.boost": "+0.1 Gold",
   "description.stone.beetle.boost": "+0.1 Stein",
   "description.iron.beetle.boost": "+0.1 Eisen",
-  "available.all.season": "Die ganze Saison verfügbar",
-  "megastore.message.allSeason": "Hier finden Sie Artikel, die während der gesamten Saison zum Kauf angeboten werden. Schnappen Sie es sich unbedingt vor Ende der Saison!",
+  "available.all.chapter": "Die ganze Saison verfügbar",
+  "megastore.message.allChapter": "Hier finden Sie Artikel, die während der gesamten Saison zum Kauf angeboten werden. Schnappen Sie es sich unbedingt vor Ende der Saison!",
   "monthly": "Monatlich",
   "seasonal": "Saisonal",
   "mega.collectibles": "Mega-Sammlerstücke",
@@ -3528,9 +3528,9 @@
   "gems.update": "Edelstein-Update",
   "gems.intro": "Um uns auf das Onboarding neuer Spieler vorzubereiten, haben wir Block Bucks durch eine neue Währung ersetzt... Edelsteine!",
   "gems.intro.two": "Du erhältst 20 Edelsteine für jeden Block Buck, den du besitzt.",
-  "birdieplaza.commonMethod": "Die gängigste Methode, {{seasonalTicket}} s zu verdienen, besteht darin, Ressourcen oder andere angeforderte Gegenstände zu sammeln und sie dann an Bumpkins auf der Plaza und in einigen anderen Bereichen zu liefern.",
-  "birdieplaza.seasonQuests": "In dieser Saison erwarten dich spannende Quests, seltene Sammlerstücke und exklusive Wearables, die du dir verdienen kannst.",
-  "birdieplaza.craftItems": "Um diese seltenen Gegenstände zu erhalten, müsst ihr {{seasonalTicket}} s sammeln und sie in Stellas Megastore eintauschen oder im Auktionshaus bieten.",
+  "birdieplaza.commonMethod": "Die gängigste Methode, {{chapterTicket}} s zu verdienen, besteht darin, Ressourcen oder andere angeforderte Gegenstände zu sammeln und sie dann an Bumpkins auf der Plaza und in einigen anderen Bereichen zu liefern.",
+  "birdieplaza.chapterQuests": "In dieser Saison erwarten dich spannende Quests, seltene Sammlerstücke und exklusive Wearables, die du dir verdienen kannst.",
+  "birdieplaza.craftItems": "Um diese seltenen Gegenstände zu erhalten, müsst ihr {{chapterTicket}} s sammeln und sie in Stellas Megastore eintauschen oder im Auktionshaus bieten.",
   "reward.streak.oneYear": "Belohnung für eine 365-tägige Serie",
   "chapter.codex.nextDrop.available": "{{dropSupply}} verfügbar",
   "description.hoot.boost": "+0.5 Weizen, Rettich, Grünkohl, Reis, Gerste",
@@ -3583,7 +3583,7 @@
   "description.chicken": "Dieses Huhn ist eine zuverlässige Quelle für frische Eier und weiche Federn und leistet mit der richtigen Pflege gerne seinen Beitrag.",
   "description.cow": "Diese sanfte Kuh liefert frische Milch und strapazierfähiges Leder. Sorgen Sie mit viel Essen und Zuneigung dafür, dass es glücklich ist.",
   "description.sheep": "Dieses flauschige Schaf bietet sowohl normale Wolle als auch luxuriöse Merinowolle. Machen Sie es glücklich, um die weichsten Ergebnisse zu erzielen!",
-  "obsessionDialogue.line3": "Ist das das {{itemName}}, das du hast? Ein bloßer Blick ist alles, was ich mir wünsche. Dafür erhalten Sie {{seasonalTicket}} s.",
+  "obsessionDialogue.line3": "Ist das das {{itemName}}, das du hast? Ein bloßer Blick ist alles, was ich mir wünsche. Dafür erhalten Sie {{chapterTicket}} s.",
   "competition.maybeLater": "Vielleicht später",
   "world.lvl.requirement": "Stufe {{lvl}}",
   "world.factionMembersOnly": "Nur Fraktionsmitglieder",
@@ -4051,7 +4051,7 @@
   "description.brush": "Tierbürste. Verwenden Sie dies, um Ihren Tieren Zuneigung zu zeigen.",
   "description.music.box": "Spielt Musik für Tiere. Verwenden Sie dies, um Ihren Tieren Zuneigung zu zeigen.",
   "levelUpMax": "Maximales Level!",
-  "birdieplaza.choresAndRewards": "Du kannst auch {{seasonalTicket}} s durch wöchentliche Aufgaben, tägliche Truhenbelohnungen, Bert's Odd Obsession und das Kopfgeldsystem verdienen!",
+  "birdieplaza.choresAndRewards": "Du kannst auch {{chapterTicket}} s durch wöchentliche Aufgaben, tägliche Truhenbelohnungen, Bert's Odd Obsession und das Kopfgeldsystem verdienen!",
   "description.community.coin": "(WIP) Eine wertvolle Münze, die für die zukünftige Verwendung in Sunflower Land reserviert ist.",
   "bedsMigration.bedsNeededDescription2": "In jedem einzigartigen Bett kann ein Landarbeiter schlafen.",
   "bedsMigration.bedsNeededDescription3": "Platziere Betten, um mehr Landarbeiter einzustellen!",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "Artikel verkauft",
   "marketplace.congratulationsItemSold": "Herzlichen Glückwunsch, Ihr Artikel wurde verkauft!",
   "withdraw.taxFree": "Goblins besteuern dich auf SFL, die du im Spiel verdient hast. Davon ausgenommen sind Einzahlungen und der Marktplatz.",
-  "bounties.board.ticketAmount": "Die Anzahl der {{seasonalTicket}} s variiert jede Woche je nach Anfrage.",
+  "bounties.board.ticketAmount": "Die Anzahl der {{chapterTicket}} s variiert jede Woche je nach Anfrage.",
   "marketplace.listing.cancelling": "Inserat stornieren",
   "marketplace.listing.cancelling.success": "Herzlichen Glückwunsch, Sie haben Ihr Angebot erfolgreich storniert!",
   "marketplace.listing.cancelling.failure": "Ups, etwas ist schief gelaufen. Bitte versuchen Sie es erneut.",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} verbleibende tägliche Einkäufe",
   "remaining.free.purchase": "Noch 1 täglicher Einkauf",
   "statements.potionRule.four": "Wenn das Spiel beendet ist, bestimmt das Ergebnis Ihres letzten Versuchs Ihre Belohnung.",
-  "obsessionDialogue.codex": "Ist das das {{itemName}}, das du hast? Reist zum Platz, um Bert zu finden und es ihm zu zeigen. Er wird euch im Gegenzug {{seasonalTicket}} s geben.",
+  "obsessionDialogue.codex": "Ist das das {{itemName}}, das du hast? Reist zum Platz, um Bert zu finden und es ihm zu zeigen. Er wird euch im Gegenzug {{chapterTicket}} s geben.",
   "bounties.board.travel": "Reise zum Platz und finde Poppy, um diese Belohnungen zu erfüllen",
   "description.trade.points": "Verdient durch den Handel mit Sammlerstücken und Wearables auf dem Marktplatz. Kann gegen Belohnungen im Spiel eingetauscht werden.",
   "reward.collectible": "Ein Sammlerstück für deine Farm",
